Update from curriculum repo

--- a/module-1/lesson-1/financial_data_module_1_lesson_1.ipynb
+++ b/module-1/lesson-1/financial_data_module_1_lesson_1.ipynb
@@ -58,10 +58,10 @@
     "## **1. Economics**\n",
     "Asset prices are greatly influenced by what happens in the macroeconomy. A thriving business cycle invites equity investments, increases in personal spending, and perhaps actions taken by the central bank. In the first module of Financial Markets, you saw examples where depositors were earning a specific interest rate.  At the same time, lenders (or borrowers) earned a different interest rate.  Depositing money in a bank will surely earn less interest than the interest you would pay on a loan from the same bank!\n",
     "\n",
-    "One of the biggest influences on markets in general, and interest rates in particular, is news.  \n",
-    "News can be thought of as expected or unexpected. Recall that efficient markets may have incorporated much of the expected news already. For example, suppose Netflix declares a \\\\$2.00 dividend. If this is indeed the amount that gets announced, then it comes as no surprise and should not affect Netflix's stock price. However, suppose there is unexpected news.\n",
-    "-Netflix had stronger than anticipated growth due to underestimated popularity with certain shows, causing a larger than expected number of subscribers in Korea. The dividend is \\\\$2.40. The stock price will likely rally.\n",
-    "-On the other hand, suppose Netflix had higher than expected costs for producing original content, causing net profits to drop. The dividend is only \\\\$1.80. The stock price will likely tumble.\n",
+    "One of the biggest influences on markets in general, and interest rates in particular, is news. News can be thought of as expected or unexpected. Recall that efficient markets may have incorporated much of the expected news already. For example, suppose Netflix declares a \\\\$2.00 dividend. If this is indeed the amount that gets announced, then it comes as no surprise and should not affect Netflix's stock price. However, suppose there is unexpected news.\n",
+    "\n",
+    "- Netflix had stronger than anticipated growth due to underestimated popularity with certain shows, causing a larger than expected number of subscribers in Korea. The dividend is \\\\$2.40. The stock price will likely rally.\n",
+    "- On the other hand, suppose Netflix had higher than expected costs for producing original content, causing net profits to drop. The dividend is only \\\\$1.80. The stock price will likely tumble.\n",
     "\n",
     "Unexpected news can be good or bad, that is, it may result in higher prices or lower prices, depending on the situation. For example, consider bad news. It can increase credit risk, threaten financing cash flows, create volatility, disrupt correlation, aggravate leverage, induce non-linearities, challenge model assumptions, stress models by incurring added costs for liquidity, promote model failure, and even bring about financial crises. Of course, one piece of bad news may not do all that, but what if the bad news affected many business--such as higher than expected interest rates?\n",
     "\n",
@@ -84,7 +84,7 @@
     "This gives us our second lesson about data. If we collected data during 2018 and then attempted to extrapolate, we would miss out on key events that affect data. Oftentimes, we need to understand key events that affect our data, as we might consider a data sample as information between those events.\n",
     "\n",
     "For example, if you construct a sample of equity data, you could collect daily equity closes, but when it comes to analyzing them, you could consider:\n",
-    "1) no grouping \n",
+    "1) no grouping\n",
     "2) 1 group per equity dividend announcement\n",
     "3) groups based on the level of the Fed Reserve rate\n",
     "4) 1 group per Fed fund meeting\n",
@@ -178,11 +178,11 @@
    "source": [
     "## **4. Information Shocks**\n",
     "\n",
-    "Indeed, we may want to collect many types of data because we get a fuller picture when we capture data from different markets and sources. Often, we will want to understand that the market experiences shocks, and having different types of data can reveal how significant those shocks are. The required reading for this module walks you through a case study about the Federal Reserve. The Fed's Chairman, Jerome Powell, made statements in October 2018 that affected equity prices for the remainder of 2018 Q4 (i.e., the fourth quarter of 2018). In short, equity prices dropped 29% over this period. Please note that we are not saying that a simple action (Fed decisions) caused these events.  Rather, we are recognizing that finance is an empirical science, rather than a controlled experiment. \n",
+    "Indeed, we may want to collect many types of data because we get a fuller picture when we capture data from different markets and sources. Often, we will want to understand that the market experiences shocks, and having different types of data can reveal how significant those shocks are. The required reading for this module walks you through a case study about the Federal Reserve. The Fed's Chairman, Jerome Powell, made statements in October 2018 that affected equity prices for the remainder of 2018 Q4 (i.e., the fourth quarter of 2018). In short, equity prices dropped 29% over this period. Please note that we are not saying that a simple action (Fed decisions) caused these events.  Rather, we are recognizing that finance is an empirical science, rather than a controlled experiment.\n",
     "\n",
     "In finance, we perform observational studies and use the enriched analysis to understand the results. Often, results do not simply continue trending or directly mean revert because the conditions continually change. As you do the reading, please study the graphs of federal funds rates, the ten-year U.S. Treasury note, and the S&P 500 stock market level to see how macroeconomic policy affects financial markets and vice versa.\n",
     "\n",
-    "This gives us the fourth point of financial data: financial series jump. Many of the models we will study in this program simplify the behavior of asset prices by assuming they are continuous (like  Brownian motion). In reality, nearly every asset, index, or economic ratio has a tendency to jump. Jumps are not \"outliers\" or \"market corrections\" per se, but rather an illustration of how markets consist of a multitude of human decision-makers who tend to react and overreact, causing extreme moves and reversals in markets. We may use models that assume jumps aren't allowed, but it is always prudent to see if the assumptions of those models can be relaxed to accommodate jumps. "
+    "This gives us the fourth point of financial data: financial series jump. Many of the models we will study in this program simplify the behavior of asset prices by assuming they are continuous (like  Brownian motion). In reality, nearly every asset, index, or economic ratio has a tendency to jump. Jumps are not \"outliers\" or \"market corrections\" per se, but rather an illustration of how markets consist of a multitude of human decision-makers who tend to react and overreact, causing extreme moves and reversals in markets. We may use models that assume jumps aren't allowed, but it is always prudent to see if the assumptions of those models can be relaxed to accommodate jumps."
    ]
   },
   {
@@ -261,8 +261,6 @@
  ],
  "metadata": {
   "colab": {
-   "collapsed_sections": [],
-   "name": "Financial Data_Module 1_Lesson 1.ipynb",
    "provenance": []
   },
   "kernelspec": {
@@ -280,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
