--- a/module-1/lesson-2/financial_data_module_1_lesson_2.ipynb
+++ b/module-1/lesson-2/financial_data_module_1_lesson_2.ipynb
@@ -108,6 +108,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "M8rUF-dXKlaD",
     "tags": [
      "raises-exception"
     ]
@@ -117,20 +118,35 @@
     "# Example code on how to use the investpy package to get Argentinian bond data.\n",
     "import investpy\n",
     "\n",
-    "data = investpy.get_bond_historical_data(\n",
-    "    bond=\"Argentina 3Y\", from_date=\"01/01/2018\", to_date=\"31/12/2021\"\n",
+    "data = investpy.bonds.get_bond_historical_data(\n",
+    "    bond=\"Argentina 3Y\", from_date=\"01/01/2022\", to_date=\"31/12/2022\"\n",
     ")\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "eYCQ6iY7KlaE"
+   },
    "source": [
-    "**Disclaimer**: \n",
+    "**Disclaimer**:\n",
     "`investpy` is not working fine currently due to some changes in [Investing.com](https://www.investing.com/) APIs and author is working to fix it. For the purpose of understanding lesson 2, please visit [Argentina 3-Year Bond Historical Data - Investing.com](https://www.investing.com/rates-bonds/argentina-3-year-bond-yield-historical-data) and download data directly for now. The code will be updated as soon as package update is released.\n",
-    "\n",
     "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example code on how to use the yfinance package to get the 13 week US treasury\n",
+    "import yfinance as yf\n",
+    "\n",
+    "data = yf.Ticker(\"^IRX\")\n",
+    "\n",
+    "data.history(period=\"5y\")"
    ]
   },
   {
@@ -265,12 +281,14 @@
    },
    "source": [
     "## **8. Conclusion**\n",
-    "This lesson outlined the types of data for the major asset classes--stocks and bonds--and categorized different types of structured and unstructured data. It concluded by addressing 10 questions you can ask about your data. In the next lesson, we look at working with securities data. "
+    "This lesson outlined the types of data for the major asset classes--stocks and bonds--and categorized different types of structured and unstructured data. It concluded by addressing 10 questions you can ask about your data. In the next lesson, we look at working with securities data."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "cwUzMhmrKlaH"
+   },
    "source": [
     "**References**\n",
     "\n",
@@ -281,7 +299,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "j_glYrE2KlaH"
    },
    "source": [
     "---\n",
@@ -293,9 +312,8 @@
  ],
  "metadata": {
   "colab": {
-   "collapsed_sections": [],
-   "name": "Financial Data_Module 1_Lesson 2.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
