--- a/module-1/lesson-3/financial_data_module_1_lesson_3.ipynb
+++ b/module-1/lesson-3/financial_data_module_1_lesson_3.ipynb
@@ -20,7 +20,7 @@
     "id": "NpBKRGBJ763_"
    },
    "source": [
-    "# **WORKING WITH SECURITIES DATA** "
+    "# **WORKING WITH SECURITIES DATA**"
    ]
   },
   {
@@ -67,7 +67,7 @@
     "* Stock Exchanges: NYSE, NASDAQ, Shangha, Shenzhen, Euronext, Nigerian, Nairobi, Stock Exchange of Mauritius, etc.\n",
     "* Option Exchanges: Chicago Board Option Exchange\n",
     "* Commodity Exchanges: Chicago Mercantile Exchange, London Metal Exchange\n",
-    "* Forex Exchanges: London, New York, Sydney, Tokyo \n",
+    "* Forex Exchanges: London, New York, Sydney, Tokyo\n",
     "* Cryptocurrency Exchanges: Bitcoin, Coinbase, Binance, Gemini, FTX  \n",
     "* Credit Agencies: S and P, Moody's, Fitch, Transunion, Equifax, Experian, Visa, Mastercard\n",
     "    \n",
@@ -112,9 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Using the `yfinance` package, we'll get Netflix stock information from Yahoo Finance\n",
@@ -189,12 +187,13 @@
     "\n",
     "Suppose we want to correlate the returns of these two companies using closing prices. We have to remember that their official exchange closes are about nine hours apart! Here is a table of times the markets open and close:\n",
     "\n",
-    " GMT    Sydney, Australia   Lagos, Nigeria    Event\n",
-    " 00:00       10:00            01:00           Sydney Stock Exchange opens\n",
-    " 06:00       16:00            07:00           Sydney Stock Exchange closes     \n",
-    " 09:00       19:00            10:00           Nigeria Stock Exchange opens\n",
-    " 13:30       23:30            14:30           Nigeria Stock Exchange closes\n",
-    "  \n",
+    "|   GMT   | Sydney, Australia | Lagos, Nigeria | Event |\n",
+    "|  :---:  |  :---:  |  :---:  |  :--- |\n",
+    "|  00:00  |  10:00  |  01:00  |  Sydney Stock Exchange opens  |\n",
+    "|  06:00  |  16:00  |  07:00  |  Sydney Stock Exchange closes  |\n",
+    "|  09:00  |  19:00  |  10:00  |  Nigeria Stock Exchange opens  |\n",
+    "|  13:30  |  23:30  |  14:30  |  Nigeria Stock Exchange closes  |\n",
+    "\n",
     "\n",
     "Depending on the objective of the analysis, one could use\n",
     "* Plan A: GMT=06:00. Get the data at Sydney's close, but the Nigerian exchange is not open!\n",
@@ -283,7 +282,7 @@
     "\n",
     "There is one common stock for Apple, and the most liquid place to trade it is on the NASDAQ (though it trades on some foreign exchanges like Buenos Aires and Berlin)\n",
     "\n",
-    "Yet, if you wanted to buy bonds, there are dozens of choices--different maturities with various coupons.  \n",
+    "Yet, if you wanted to buy bonds, there are dozens of choices -- different maturities with various coupons.  \n",
     "\n",
     "Furthermore, if you wanted to buy options, there are hundreds of choices--calls or puts, different strike levels, different expirations, different types of exercise, and even different payoffs (vanilla or exotics). The choices are staggering.\n",
     "\n",
@@ -302,8 +301,7 @@
    },
    "source": [
     "## **7. Conclusion**\n",
-    "Financial data has its own set of idiosyncrasies and complexities: different frequencies, units, time zones, currencies, some of which represent executable prices and others that are mere quotes. This lesson gave a broad introduction to these issues. In the next lesson, we'll add unstructured data and compare how these data management issues lead the way to getting data ready for machine learning.\n",
-    " "
+    "Financial data has its own set of idiosyncrasies and complexities: different frequencies, units, time zones, currencies, some of which represent executable prices and others that are mere quotes. This lesson gave a broad introduction to these issues. In the next lesson, we'll add unstructured data and compare how these data management issues lead the way to getting data ready for machine learning.\n"
    ]
   },
   {
@@ -331,7 +329,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "5pylasyMCg-f"
    },
    "source": [
     "---\n",
@@ -343,7 +342,6 @@
  ],
  "metadata": {
   "colab": {
-   "name": "Financial Data_Module 1_Lesson 3.ipynb",
    "provenance": []
   },
   "kernelspec": {
