--- a/module-1/lesson-4/financial_data_module_1_lesson_4.ipynb
+++ b/module-1/lesson-4/financial_data_module_1_lesson_4.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "### **2.4 Timeliness**\n",
     "The last point concerns the timeliness of data. Arguably, this is the most difficult issue in finance, because financial models built with data can easily become \"miscalibrated\". Finance is not physics. In physics, the laws of the universe are largely invariant over time. Data we collected yesterday can be used to construct a model that would likely work just as well tomorrow as it does today. Finance, however, is not physics but social science. In social science, laws are replaced by \"principles\" or \"rules\" by which humans tend to behave and make decisions.  However, people change their behavior and their decision-making, so models that work one day in finance may not necessarily work the next–-either because a new calibration is needed or perhaps because the model as a whole is no longer appropriate.  \n",
-    "For example, several years ago, the app Google Maps suggested a shortcut for commuters driving to New York City over the George Washington Bridge. At first, only a few drivers followed this shortcut. But as Google Maps and other navigation apps had wider adoption, more and more drivers took this shortcut. It reached a point where the shortcut became just the opposite: traffic congestion. The town attempted to ban out-of-town drivers from using their roads. When people learn of shortcuts, tricks, and secrets, they can change their behavior in a way that effectively eliminates the short cut (Foderaro). \n",
+    "For example, several years ago, the app Google Maps suggested a shortcut for commuters driving to New York City over the George Washington Bridge. At first, only a few drivers followed this shortcut. But as Google Maps and other navigation apps had wider adoption, more and more drivers took this shortcut. It reached a point where the shortcut became just the opposite: traffic congestion. The town attempted to ban out-of-town drivers from using their roads. When people learn of shortcuts, tricks, and secrets, they can change their behavior in a way that effectively eliminates the short cut (Foderaro).\n",
     "\n",
     "In market terms, if there is arbitrage ('extra time'), as market participants learn and exploit it, it goes away: a restoration of market efficiency. As financial engineers, the price we pay is a constant and healthy amount of skepticism: How can we know that the data we collected continues to accurately represent the way the system works today?  \n"
    ]
@@ -160,7 +160,7 @@
     "What are the properties of alternative data?  We can list at least half a dozen:\n",
     "\n",
     "1.   They tend to be unstructured\n",
-    "2.   They tend to be less commonly used in traditional finance \n",
+    "2.   They tend to be less commonly used in traditional finance\n",
     "3. Many of the sources (but not all) come from non-financial markets\n",
     "4. Many of the data contain rare or extreme events\n",
     "5. Many contain non-textual information, such as audio, video, or imagery\n",
@@ -188,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "ljEtjqkqCgSt"
+   },
    "outputs": [],
    "source": [
     "# Let's look at a few fundamentals on Uber.\n",
@@ -227,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "uXF3PU3TCgSv"
+   },
    "outputs": [],
    "source": [
     "uber.balance_sheet()  # Uber Balance Sheet"
@@ -258,7 +262,7 @@
     "tags": []
    },
    "source": [
-    "## **5. The Big Data: The 5 Vs** \n",
+    "## **5. The Big Data: The 5 Vs**\n",
     "\n",
     "In the field of data science, machine learning has provided best practices of data for more than 20 years. There is a well-known \"Big 5 Vs.\" (Some papers point to dozens and dozens of Vs!) We'll discuss these five features. (Please see the Ishwarappa paper for more details.)\n",
     "\n",
@@ -272,7 +276,7 @@
     "\n",
     "* **Velocity**\n",
     "\n",
-    "    Velocity refers to the rate at which data is created in real time. Exchange data can be as fast as fractions of a millisecond! Other financial data may not be \n",
+    "    Velocity refers to the rate at which data is created in real time. Exchange data can be as fast as fractions of a millisecond! Other financial data may not be\n",
     "    available more than once a day or even quarterly in the case of economic indicators.\n",
     "\n",
     "* **Veracity**\n",
@@ -283,7 +287,7 @@
     "\n",
     "    Value refers to the insights available in the data.  \n",
     "\n",
-    "## **6. Conclusion** \n",
+    "## **6. Conclusion**\n",
     "\n",
     "Data science has influenced every field due to its universal nature of addressing data collection, visualization, modeling, and presentation. Financial engineering is no exception. As financial engineers, we'll examine machine learning problems through a financial lens and follow the best practices for data that have been recommended in both fields."
    ]
@@ -312,7 +316,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "imIlPQHzCgSw"
    },
    "source": [
     "---\n",
@@ -324,8 +329,6 @@
  ],
  "metadata": {
   "colab": {
-   "collapsed_sections": [],
-   "name": "Financial Data_Module 1_Lesson 4.ipynb",
    "provenance": []
   },
   "kernelspec": {
