--- a/module-2/lesson-1/financial_data_module_2_lesson_1.ipynb
+++ b/module-2/lesson-1/financial_data_module_2_lesson_1.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "fTPRBUJnCfu0"
+   },
    "source": [
     "\n",
     "## FINANCIAL DATA\n",
@@ -14,14 +16,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "VOyqq4SsCfu1"
+   },
    "source": [
     "# ANALYZING PRICES OF STOCKS, BITCOIN, AND BONDS"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "On7W_SNdCfu1"
+   },
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -34,7 +40,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "vWiAbGIjCfu2"
+   },
    "source": [
     "*For the first lesson of this module, we will recap some of the concepts you learned during the Financial Markets class. We will examine stocks, bonds, and cryptocurrency prices during this lesson. Finally, we will also demonstrate how to pull price data from Python and do some basic price analysis of equities, Bitcoin, and bond data.*<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
@@ -57,7 +65,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "l61LxVuhCfu3"
+   },
    "source": [
     "## 1. Pull Equities Data from Amazon and Ford, along with Bitcoin Data\n",
     "The following code pulls the last five years of equity price data from Ford and Amazon along with the daily Bitcoin prices over the same time period. The reason we chose Ford and Amazon here is to give examples from different sectors. While Amazon has been around for a while now, it still represents a newer, popular tech stock while Ford is very much a part of the old guard, trading publicly since 1956.\n"
@@ -80,6 +90,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "PJGnF7_wCfu3",
     "tags": []
    },
    "source": [
@@ -98,16 +109,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "vnvV0a7NCfu3"
+   },
    "source": [
     "Right off the bat, we can see in Figure 1 that it was a smart idea to take a look at this data first. Can you guess why we have null values here?\n",
     "\n",
-    "The answer is simple—equities only trade Monday through Friday, which means there's no price data available on the weekends. Bitcoin does not have this same characteristic as it trades seven days a week, which is why 2016-11-19 and 2016-11-20 are populated in this case. "
+    "The answer is simple—equities only trade Monday through Friday, which means there's no price data available on the weekends. Bitcoin does not have this same characteristic as it trades seven days a week, which is why 2016-11-19 and 2016-11-20 are populated in this case."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "RzEwSrPNCfu3"
+   },
    "source": [
     "### 1.2 Digging a little deeper into the data\n",
     "We can use the pandas *describe()* method to show summary stats of our data. We can see that Bitcoin has a much higher number of observations (count) than our two stocks, which, as just discussed, is because of stocks not being traded on weekends. The other summary stats are relatively basic, like mean and standard deviation along with showing minimum, maximum, and a few quantiles. This might be something you are interested in, but it is hard to compare these investments with this data alone since each asset had a different starting price five years ago. For a better comparison, we will have to examine returns in more depth in an upcoming lesson."
@@ -124,7 +139,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "wV3DMKouCfu4"
+   },
    "source": [
     "In the following video, we will recap what's been done so far and show how to pull price data using Python's built-in libraries.\n"
    ]
@@ -140,14 +157,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "aFwFZ3brCfu4"
+   },
    "source": [
     "##### [Access video transcript here](https://drive.google.com/file/d/1c6-7UwtiIlRk8kjvp5_76gsTgCdoFUG7/view?usp=sharing)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "I2csR_8CCfu4"
+   },
    "source": [
     "### 1.3 Charting prices over 2020\n",
     "If we ever want to get a quick plot of the DataFrame's data, we can use the aptly named plot() method. As shown below to chart the 2020 returns of these 3 assets"
@@ -164,7 +185,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0T1GauGkCfu5"
+   },
    "source": [
     "The above code and chart demonstrate how we can easily pass in a date range to the plot method in order to chart a subset of the data. If no date range is supplied, by default, the plot will encapsulate the entire data set. Once again, the following chart illustrates why using price alone is not ideal for comparing two assets. The scale of Bitcoin's price versus a low-price stock like Ford makes it very hard to compare the two when deciding which stock is better to invest in.\n",
     "\n"
@@ -172,15 +195,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "hTeHrdgRCfu5"
+   },
    "source": [
     "## 2. Calculating Return on Investment\n",
-    "If we invested \\\\$1,000 into each of these assets five years ago, how much money would we have today? To answer this question, we first need to determine how many shares of each stock we could buy with \\\\$1,000 at the start of our date range. For the purposes of this exercise, we will use 11/21/2016 as our starting point because it's the first weekday of our data set. \n",
+    "If we invested \\\\$1,000 into each of these assets five years ago, how much money would we have today? To answer this question, we first need to determine how many shares of each stock we could buy with \\\\$1,000 at the start of our date range. For the purposes of this exercise, we will use 11/21/2016 as our starting point because it's the first weekday of our data set.\n",
     "\n",
-    "From our data above, we can see the starting prices of AMZN, F, and Bitcoin were \\\\$780, \\\\$8.706, and \\\\$739.248 respectively. Now, we need to divide \\\\$1,000 by each of these numbers to see how many shares we will have:\n",
+    "From our data above, we can see the starting prices of AMZN, F, and Bitcoin were \\\\$780, \\\\$8.375, and \\\\$739.248 respectively. Now, we need to divide \\\\$1,000 by each of these numbers to see how many shares we will have:\n",
     "\n",
     "AMZN = 1000/780 = 1.282 shares\n",
-    "F = 1000/8.706 = 114.863 shares\n",
+    "F = 1000/8.375 = 119.403 shares\n",
     "Bitcoin = 1000/739.248 = 1.353 shares\n",
     "It's a relatively recent phenomenon that retail brokers offer fractional shares, but this tends to be the case nowadays for most commonly used brokers. For this exercise, we will assume we can have fractional shares.\n",
     "\n",
@@ -203,21 +228,23 @@
    "outputs": [],
    "source": [
     "print(\"AMZN = \", 1.282 * 3696.06)\n",
-    "print(\"F = \", 114.863 * 17.82)\n",
+    "print(\"F = \", 119.403 * 17.14)\n",
     "print(\"Bitcoin = \", 1.353 * 56942.14)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "84vLzYVYCfu5"
+   },
    "source": [
     "From here, we can get our final asset values:\n",
     "\n",
     "- AMZN = 1.282 * 3696.06 = \\\\$4,738.35\n",
-    "- F = 114.863 * 17.82 = \\\\$2,046.86\n",
+    "- F = 119.403 * 17.14 = \\\\$2,046.57\n",
     "- Bitcoin = 1.353 * 56942.14 = \\\\$77,042.72\n",
     "\n",
-    "Wow. All three of these assets have at least doubled the initial \\\\$1,000 that was invested. Bitcoin is clearly the standout asset in this case, turning \\\\$1,000 into a whopping \\$77,042.72. While Bitcoin clearly outperformed the other two assets over the last five years, past performance does not necessarily indicate future performance. \n",
+    "Wow. All three of these assets have at least doubled the initial \\\\$1,000 that was invested. Bitcoin is clearly the standout asset in this case, turning \\\\$1,000 into a whopping \\$77,042.72. While Bitcoin clearly outperformed the other two assets over the last five years, past performance does not necessarily indicate future performance.\n",
     "\n",
     "These assets were relatively easy to compare here since we started with \\\\$1,000 in each. If we had started with different values, we would need to calculate the returns for an apples-to-apples comparison. In a future lesson, we will go over simple and log returns, but for the purpose of simplicity, we will use simple returns:\n",
     "\n",
@@ -230,15 +257,17 @@
     "This will be easy in our case since \\$1,000 is the initial value in all three situations:\n",
     "\n",
     "- AMZN = (4738.35 - 1000)/1000 = 3.7384 = 373.84%\n",
-    "- F = (2046.86 - 1000)/1000 = 1.0469 = 104.69%\n",
+    "- F = (2046.57 - 1000)/1000 = 1.0466 = 104.66%\n",
     "- Bitcoin = (77042.72 - 1000)/1000 = 76.04272 = 7,604.27%\n",
     "\n",
-    "Bitcoin's return here is off the charts compared to the other two assets. Bitcoin is a relatively new—some would even say riskier—asset than the other two. Higher risk equals higher potential for rewards, and thus far, investing in Bitcoin has paid off handsomely. "
+    "Bitcoin's return here is off the charts compared to the other two assets. Bitcoin is a relatively new—some would even say riskier—asset than the other two. Higher risk equals higher potential for rewards, and thus far, investing in Bitcoin has paid off handsomely."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0BZmRjA9Cfu5"
+   },
    "source": [
     "## 3. Comparing Equities and Bitcoin to Bonds\n",
     "Let's introduce one more asset class here—bonds. As you recall from the Financial Markets class, bonds not only have the return of principal but they also return a coupon, usually annually or quarterly. To simplify things, we will use an exchange traded fund (ETF), which tracks bonds. The ETF is the Vanguard Long-Term Bond Index Fund ETF or BLV for short. This fund intends to track the performance of the Bloomberg Barclays U.S. Long Government/Credit Float Adjusted Index. This index includes investment grade corporate, U.S. government, and international dollar-denominated bonds that have maturities greater than 10 years. At least 80% of the fund's total assets will be invested in bonds held in the index mentioned above (Vanguard).\n",
@@ -267,7 +296,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "B92mo8SpCfu6"
+   },
    "source": [
     "### 3.1 Calculate log returns, remove unused columns, and drop nulls\n",
     "\n",
@@ -298,7 +329,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3ZOeyLS3Cfu6"
+   },
    "source": [
     "### 3.2 Show summary stats for the returns"
    ]
@@ -314,7 +347,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "eir3BlWdCfu6"
+   },
    "source": [
     "### 3.3 Converting Daily Returns to Annual"
    ]
@@ -339,15 +374,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "rzgA2bxUCfu7"
+   },
    "source": [
-    "We can run the same analysis on BLV as we did on the above stocks to get the total simple return over a five-year period using a slightly different method. This time, we'll calculate the simple return and then just multiply that number by 1+ `returnRate`. \n",
+    "We can run the same analysis on BLV as we did on the above stocks to get the total simple return over a five-year period using a slightly different method. This time, we'll calculate the simple return and then just multiply that number by 1+ `returnRate`.\n",
     "\n",
-    "BLV 5 year return = (97.98-68.9)/68.9 = 0.422061 = 42.21%\n",
+    "BLV 5 year return = (95.24-67.16)/67.16 = 0.418106 = 41.81%\n",
     "\n",
-    "If we started with \\\\$1,000, after five years, we would've ended up with (1+0.422061) * 1000 = \\\\$1,422.06.\n",
+    "If we started with \\\\$1,000, after five years, we would've ended up with (1+0.418106) * 1000 = \\\\$1,418.11.\n",
     "\n",
-    "While this is still a positive return, it's a much lower return than what we would've gotten with Ford, Amazon, or Bitcoin. This is to be expected for the most part as bonds return a quarterly/annual coupon along with returning the principal. For this reason, bonds (especially government bonds) are considered safer assets than stocks or cryptocurrencies. One major thing to consider is if a company goes bankrupt, you may not get your principal back in a bond. That being said, the same goes for stocks. Bondholders also have less credit risk than stockholders: If you own a bond in Ford and your friend owns Ford stock, but Ford declares bankruptcy tomorrow, the bondholder will be paid off first in the bankruptcy proceedings and the equity owner will only get what's left over, making bonds a safer investment. \n",
+    "While this is still a positive return, it's a much lower return than what we would've gotten with Ford, Amazon, or Bitcoin. This is to be expected for the most part as bonds return a quarterly/annual coupon along with returning the principal. For this reason, bonds (especially government bonds) are considered safer assets than stocks or cryptocurrencies. One major thing to consider is if a company goes bankrupt, you may not get your principal back in a bond. That being said, the same goes for stocks. Bondholders also have less credit risk than stockholders: If you own a bond in Ford and your friend owns Ford stock, but Ford declares bankruptcy tomorrow, the bondholder will be paid off first in the bankruptcy proceedings and the equity owner will only get what's left over, making bonds a safer investment.\n",
     "\n",
     "The downside to this is that it's hard to achieve the level of total returns that a stock or cryptocurrency can achieve with a bond. There is a risk-reward tradeoff. Think back to the reading in this lesson for a moment. What we just discussed here is mentioned in the reading comparing a high-variance investment to a low-variance investment. What you choose is entirely up to your risk preferences. Always take into consideration the risk-reward tradeoff.\n",
     "\n",
@@ -367,14 +404,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "FBNLEpbjCfu8"
+   },
    "source": [
     "##### [Access video transcript here](https://drive.google.com/file/d/1MlwM_Ox9NvKBpM1nfmGdJa_Gh34XDRhE/view?usp=sharing)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "YnHOFl2LCfu8"
+   },
    "source": [
     "## 4. Conclusion\n",
     "\n",
@@ -383,7 +424,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "w5f7CdupCfu8"
+   },
    "source": [
     "**References**\n",
     "\n",
@@ -394,7 +437,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "DMS-7fV-Cfu8"
    },
    "source": [
     "---\n",
@@ -405,6 +449,9 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
