--- a/module-3/lesson-3/financial_data_module_3_lesson_3.ipynb
+++ b/module-3/lesson-3/financial_data_module_3_lesson_3.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "OKgR30kRCapL"
+   },
    "source": [
     "## FINANCIAL DATA\n",
     "\n",
@@ -14,14 +16,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "rpy48JOQCapN"
+   },
    "source": [
     "# ANALYZING COSTS AND BENEFITS OF OWNING AN ETF"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "DIWW3l0SCapN"
+   },
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -34,7 +40,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "2CQoFchQCapN"
+   },
    "source": [
     "*In the last lesson, we showcased the benefits of diversification to a portfolio. Here, we will show how to effectively tap into those diversification benefits through owning an ETF.*"
    ]
@@ -42,7 +50,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 2046,
+     "status": "ok",
+     "timestamp": 1698952136268,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "7q8rTR7pCapO"
+   },
    "outputs": [],
    "source": [
     "import datetime\n",
@@ -58,11 +78,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "5m8MbrVgCapO"
+   },
    "source": [
     "## 1. Analyzing Exchange Traded Funds (ETFs)\n",
     "\n",
-    "For this lesson, we will continue building upon the analytical tools we've learned in previous lessons to further examine exchange traded funds (ETFs). To this point, we have used ETFs a few times already like, when we used BLV as a proxy for bonds, but in this lesson we will go into further detail about ETFs and what makes them such an important investing tool. \n",
+    "For this lesson, we will continue building upon the analytical tools we've learned in previous lessons to further examine exchange traded funds (ETFs). To this point, we have used ETFs a few times already like, when we used BLV as a proxy for bonds, but in this lesson we will go into further detail about ETFs and what makes them such an important investing tool.\n",
     "\n",
     "### 1.1 ETF Benefits\n",
     "* Diversification: exchange traded funds essentially have some form of diversification built in already. We went over the benefits of diversification in the last lesson and that is built into the DNA of what an ETF is. For example, you can invest in the SPDR S&P 500 ETF Trust(SPY) which tracks the S&P 500. This allows you to effectively invest in 500 companies at once instead of actually having to buy the stocks of 500 companies individually. You can reap the diversification benefits from this. Most ETFs even rebalance every quarter so you don't have to worry about that either.\n",
@@ -97,7 +119,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "wBWPWEIGCapQ"
+   },
    "source": [
     "Let's examine what happened to XLF during this time period and see how it held up:\n"
    ]
@@ -105,7 +129,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 1870,
+     "status": "ok",
+     "timestamp": 1698952140493,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "UIwMrYGNCapQ",
+    "outputId": "dcc4f84c-53ca-4db5-e46a-7104dc49f10c"
+   },
    "outputs": [],
    "source": [
     "start = datetime.date(2006, 1, 1)\n",
@@ -119,7 +159,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 465
+    },
+    "executionInfo": {
+     "elapsed": 1562,
+     "status": "ok",
+     "timestamp": 1698952142542,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "TCU1oBVjCapQ",
+    "outputId": "1110c3d4-06f8-47a5-824b-398441e824f3"
+   },
    "outputs": [],
    "source": [
     "# set figure size\n",
@@ -132,15 +189,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "hEM3HymmCapQ"
+   },
    "source": [
-    "Lehman Brothers collapse had a profound effect on the financial industry as seen in the above chart. They had lots of different exposure to different financial institutions and for a variety of reasons, the U.S. economy went into the worst recession since the Great Depression. If we just take a moment to look at the period from 2006 to the start of 2010 and compare the min and max of the data at this time, you can see that XLF lost 82.7% as its max drawdown. "
+    "Lehman Brothers collapse had a profound effect on the financial industry as seen in the above chart. They had lots of different exposure to different financial institutions and for a variety of reasons, the U.S. economy went into the worst recession since the Great Depression. If we just take a moment to look at the period from 2006 to the start of 2010 and compare the min and max of the data at this time, you can see that XLF lost 82.7% as its max drawdown."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 368,
+     "status": "ok",
+     "timestamp": 1698952150516,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "1D34nCeKCapR",
+    "outputId": "5c87cb0f-6e30-4007-febb-71e772889fb3"
+   },
    "outputs": [],
    "source": [
     "drawdown = (\n",
@@ -151,7 +226,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "xPjRETjKCapR"
+   },
    "source": [
     "I'm sure near the start of 2010, Elaine would be distraught over her investment since XLF was performing horribly. As sad as she would be, Jerry would be more upset since his investing account is now worth \\\\$0 with no way to recoup his initial investment. Lucky for Elaine, she's a patient person so instead of taking a massive loss, she decided she would just wait and hold. Let's see her percentage return from the start of 2006 to today:"
    ]
@@ -159,7 +236,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 454,
+     "status": "ok",
+     "timestamp": 1698952154460,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "vLl6UT8ECapR",
+    "outputId": "51d1978a-3969-4d21-ff53-447822ca9bbc"
+   },
    "outputs": [],
    "source": [
     "(100 * (prices.XLF[-1] - prices.XLF[0]) / prices.XLF[0]).round(2)"
@@ -167,30 +260,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "CumTkNM2CapR"
+   },
    "source": [
     "By having the benefits of diversification through an ETF and by being patient, Elaine would've ended up with a 104.82% return since 2006. If she invested \\\\$10,000 dollars into the fund then while Jerry invested \\\\$10,000 into Lehman Brothers, he would be left with \\\\$0 while Elaine would be sitting on about $20,482. This is just one example of many illustrating the benefits of diversification through ETFs.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "4jVsRYIvCapR"
+   },
    "source": [
     "### 1.3 ETF Benefits - Survivorship Bias\n",
     "Many ETFs have to follow certain rules for which companies they can hold: this has a sort of built in survivorship bias, which can help investors. For example, consider the Dow Jones Industrial Average (DJIA), which is one of the oldest equity indices on Earth. This index was created by Charles Dow in 1896 with the following original components:\n",
     "\n",
-    "* American Cotton Oil \n",
-    "* American Sugar \n",
+    "* American Cotton Oil\n",
+    "* American Sugar\n",
     "* American Tobacco\n",
-    "* Chicago Gas \n",
-    "* Distilling & Cattle Feeding \n",
-    "* General Electric \n",
-    "* Laclede Gas \n",
-    "* National Lead \n",
-    "* North American \n",
-    "* Tennessee Coal Iron and RR \n",
-    "* U.S. Leather \n",
-    "* United States Rubber \n",
+    "* Chicago Gas\n",
+    "* Distilling & Cattle Feeding\n",
+    "* General Electric\n",
+    "* Laclede Gas\n",
+    "* National Lead\n",
+    "* North American\n",
+    "* Tennessee Coal Iron and RR\n",
+    "* U.S. Leather\n",
+    "* United States Rubber\n",
     "\n",
     "General Electric is likely the only one you have heard of out of these and is the only company from this list still with its original name. The rest of them have been dissolved or spun off into different companies. Considering this, you would expect the Dow Jones Industrial Average to be struggling, but that's not the case. DJIA hit an all-time low during the summer of 1890 where the index hit a price of 28.48. Fast forward to 2021 and the index is at \\\\$35,754.69 as of December 9th, 2021. This is clearly not an index in bad shape. This is because over time, as views change regarding what should constitute the DJIA, companies were removed and added. In fact, General Electric has been removed twice throughout it's history, finally in 2018 as it is no longer on the index today (S&P Dow Jones Indices).\n",
     "\n",
@@ -199,13 +296,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "wY-NGuLFCapS"
+   },
    "source": [
     "### 1.4 Expense Ratios\n",
-    "One thing to consider before buying an ETF is the expense ratio. This is written as a percentage of the net asset value of each fund. The expense ratio is used to pay for many different things like the salaries of the managers, marketing, administration, distribution, and any other expenses. Typically, the expense ratio of ETFs is much lower than that of mutual funds, which is one of the reasons why ETFs have become so popular in recent years comparatively. \n",
+    "One thing to consider before buying an ETF is the expense ratio. This is written as a percentage of the net asset value of each fund. The expense ratio is used to pay for many different things like the salaries of the managers, marketing, administration, distribution, and any other expenses. Typically, the expense ratio of ETFs is much lower than that of mutual funds, which is one of the reasons why ETFs have become so popular in recent years comparatively.\n",
     "\n",
     "#### 1.4.1 How can we calculate the expense ratio of an ETF\n",
-    "We can use SPY as an example; it has a 0.094% expense ratio. Now, if you calculate returns like we have been, you may notice that the expense ratio is built into the price. This means that when you buy an ETF, you won't get a charge for the annual expense ratio; it will just be reflected in your returns. \n",
+    "We can use SPY as an example; it has a 0.094% expense ratio. Now, if you calculate returns like we have been, you may notice that the expense ratio is built into the price. This means that when you buy an ETF, you won't get a charge for the annual expense ratio; it will just be reflected in your returns.\n",
     "\n",
     "Let's use a hypothetical ETF to illustrate how the expense ratio is calculated. Assume we invest into hypothetical ETF, ABC with:\n",
     "* \\\\$10,000 initial investment\n",
@@ -213,7 +312,7 @@
     "* After one year, the underlying assets are worth \\\\$6,000 per share\n",
     "* Expense ratio is 0.5%\n",
     "\n",
-    "How much money do we have in our account at the end of the year assuming the expense ratio wasn't taken out yet? \n",
+    "How much money do we have in our account at the end of the year assuming the expense ratio wasn't taken out yet?\n",
     "\n",
     "We can calculate the cost per share using the final value at the end of the year - \\\\$6,000\n"
    ]
@@ -221,7 +320,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 371,
+     "status": "ok",
+     "timestamp": 1698952174467,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "9fmnW0eNCapS",
+    "outputId": "46e7de6e-c89b-40a3-9a01-96eac8fc03b5"
+   },
    "outputs": [],
    "source": [
     "6000 * 0.005"
@@ -229,7 +344,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "I0yiX7jbCapS"
+   },
    "source": [
     "This means at the current price we're losing \\\\$30 a year annually per share. Multiply this by two shares and our final portfolio value at the end of the year is:"
    ]
@@ -237,7 +354,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 339,
+     "status": "ok",
+     "timestamp": 1698952176418,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "ERb9S7QNCapS",
+    "outputId": "38e7900f-5155-4c35-f8c8-819f4a91f5d3"
+   },
    "outputs": [],
    "source": [
     "(6000 - 30) * 2"
@@ -245,14 +378,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "opZ2MWsxCapS"
+   },
    "source": [
     "Instead of having a portfolio value of \\\\$12,000 by the end of the year, it's worth \\\\$11,940 when taking into account the expense ratio. This may not seem like a lot, but not all expense ratios are created equally and we must take this into consideration before investing into an ETF. If a portfolio is unchanged at the end of the year, then it loses the expense ratio, since the return was 0 before expenses."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "_N39FHoBCapS"
+   },
    "source": [
     "### 1.5 Active versus Passive ETFs\n",
     "When ETFs were initially invented, they were designed to allow investors to invest into funds that track indices like the S&P 500, Dow Jones Industrial Average, etc. These would be considered passive funds since their sole purpose was to track an underlying index.\n",
@@ -265,7 +402,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "Wz4mpou_CapS"
+   },
    "source": [
     "**References**\n",
     "\n",
@@ -280,7 +419,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "rX3Cupk3CapS"
    },
    "source": [
     "---\n",
@@ -291,6 +431,10 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "provenance": [],
+   "toc_visible": true
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
