--- a/module-3/lesson-4/financial_data_module_3_lesson_4.ipynb
+++ b/module-3/lesson-4/financial_data_module_3_lesson_4.ipynb
@@ -17,14 +17,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "-jP3A3huCZ4u"
+   },
    "source": [
     "# IDENTIFYING AND APPLYING DOWNSIDE RISK METRICS ASSOCIATED WITH FINANCIAL MARKETS"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "zpOqAgKvCZ4u"
+   },
    "source": [
     "|  |  |\n",
     "|:---|:---|\n",
@@ -37,7 +41,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "JGf5RKohCZ4v"
+   },
    "source": [
     "*This lesson will go over a fundamental risk concept, Value at Risk. This will allow us to estimate the maximum amount of money we can lose in a single day given a confidence level. This metric is employed at banks and financial institutions around the world in order to mitigate market risk. Using this and it's many variations will help us build a well-balanced portfolio to try to protect us from financial losses going forward*"
    ]
@@ -46,6 +52,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 2258,
+     "status": "ok",
+     "timestamp": 1698952236021,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "J7112_MiH4b3"
    },
    "outputs": [],
@@ -78,7 +94,7 @@
     "There are three basic methods for calculating VaR, each with their own advantages and disadvantages. These should build on some of the lessons from earlier, like variance and covariance. Keep in mind that there are countless variations of each basic method, but we will stick with these main three for now:\n",
     "\n",
     "* Historical Method\n",
-    "* Parametric Method \n",
+    "* Parametric Method\n",
     "* Monte Carlo Simulation\n"
    ]
   },
@@ -122,7 +138,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "lli0ApsLH4b9"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 363,
+     "status": "ok",
+     "timestamp": 1698952278257,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "lli0ApsLH4b9",
+    "outputId": "5b9b1422-a6dd-4d14-f6e4-e17cf4a81012"
    },
    "outputs": [],
    "source": [
@@ -140,8 +170,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 430
+    },
+    "executionInfo": {
+     "elapsed": 988,
+     "status": "ok",
+     "timestamp": 1698952281024,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "q5mDEWroH4cA",
-    "outputId": "0fd77c2a-6b34-4366-b402-90bb21ea7b1c"
+    "outputId": "bbc91487-da3f-42b8-fb1b-88300fb17961"
    },
    "outputs": [],
    "source": [
@@ -165,6 +209,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 238,
+     "status": "ok",
+     "timestamp": 1698952285083,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "iP6X5mEcH4cC"
    },
    "outputs": [],
@@ -182,8 +236,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 213,
+     "status": "ok",
+     "timestamp": 1698952288226,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "srpjpycoH4cC",
-    "outputId": "ff44f244-e040-4f34-a08a-a58b772f2306"
+    "outputId": "8832c946-b6a5-4769-8bb4-cd79d141ad8d"
    },
    "outputs": [],
    "source": [
@@ -194,8 +261,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 325,
+     "status": "ok",
+     "timestamp": 1698952290698,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "CO9cAUaSH4cD",
-    "outputId": "08237857-9952-4d6b-c8d5-4776fa3f22ac"
+    "outputId": "d2304793-261b-4325-8105-807394bebc8b"
    },
    "outputs": [],
    "source": [
@@ -210,9 +290,9 @@
    "source": [
     "It can be seen after running the function that the greater we make our confidence level, the lower the Value at Risk will be. This is a useful tool when determining how much a financial asset can lose over a certain time period.\n",
     "\n",
-    "Using the historical method, if we have -10% as the 95% confidence VaR, it can be interpreted that 95% of the time, our asset shouldn't return lower than -10% in a single day. \n",
+    "Using the historical method, if we have -6.02% as the 95% confidence VaR, it can be interpreted that 95% of the time, our asset shouldn't return lower than -6.02% in a single day.\n",
     "\n",
-    "You may be wondering now, since we only use a 95% confidence level, what happens on those 5% of days where losses exceed -10%. We can use another handy metric, Conditional Value at Risk (CVaR), to deal with these situations."
+    "You may be wondering now, since we only use a 95% confidence level, what happens on those 5% of days where losses exceed -6.02%. We can use another handy metric, Conditional Value at Risk (CVaR), to deal with these situations."
    ]
   },
   {
@@ -229,6 +309,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 215,
+     "status": "ok",
+     "timestamp": 1698952327671,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "2sTzs-TuH4cF"
    },
    "outputs": [],
@@ -246,8 +336,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 205,
+     "status": "ok",
+     "timestamp": 1698952329852,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "lGM_SHFZH4cF",
-    "outputId": "9fd0ba8d-081b-4a8b-a6ce-c9377ed829a8"
+    "outputId": "441c8911-a6d3-412e-ea0a-33d06cdc89f3"
    },
    "outputs": [],
    "source": [
@@ -260,14 +363,28 @@
     "id": "ZYuvDOzRH4cG"
    },
    "source": [
-    "The above can be interpreted that in the 5% of days where returns are less than our VaR, we can expect our return to average about -9%. This is another helpful tool when assessing the risk of an asset. Since these functions are defined now, we can quickly compare the Bitcoin results to a bond index, BLV. "
+    "The above can be interpreted that in the 5% of days where returns are less than our VaR, we can expect our return to average about -9%. This is another helpful tool when assessing the risk of an asset. Since these functions are defined now, we can quickly compare the Bitcoin results to a bond index, BLV."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "0sdsa8s9H4cH"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 860,
+     "status": "ok",
+     "timestamp": 1698952332521,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "0sdsa8s9H4cH",
+    "outputId": "63342c72-b157-4fc2-b704-20c3f740caee"
    },
    "outputs": [],
    "source": [
@@ -285,8 +402,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 378,
+     "status": "ok",
+     "timestamp": 1698952334375,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "1HFJLKxGH4cH",
-    "outputId": "9b31080c-7a62-4a05-9aaf-cbb0c3f30db3"
+    "outputId": "2c608049-8875-4d4a-e183-b05e29743713"
    },
    "outputs": [],
    "source": [
@@ -297,8 +427,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 213,
+     "status": "ok",
+     "timestamp": 1698952335930,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "uEftlS9XH4cI",
-    "outputId": "c7248a3a-30dc-41f8-8616-c08006afa7af"
+    "outputId": "d3a52230-cc45-4de2-9c92-984c50fe2a68"
    },
    "outputs": [],
    "source": [
@@ -313,7 +456,7 @@
    "source": [
     "While Bitcoin's 95% VaR and CVaR over the last five years is about -6% and -9% respectively, the bond index, BLV, has -0.93% and -1.5% for the same metrics. This goes to show how much more downside risk an asset like Bitcoin holds when compared to bonds.\n",
     "\n",
-    "With the historical method, we're using only values that actually occurred in our dataset. This may not always be the scientific method because what happened over the last five years may not reflect what will happen over the next five years. We need to explore all of our options in order to best understand the risk profile of our investments. This leads us to a different way to calculate VaR. \n",
+    "With the historical method, we're using only values that actually occurred in our dataset. This may not always be the scientific method because what happened over the last five years may not reflect what will happen over the next five years. We need to explore all of our options in order to best understand the risk profile of our investments. This leads us to a different way to calculate VaR.\n",
     "\n",
     "In the first video of this lesson, we recap the definition of VaR and how to calculate it using the historical method."
    ]
@@ -322,8 +465,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 321
+    },
+    "executionInfo": {
+     "elapsed": 9,
+     "status": "ok",
+     "timestamp": 1698922531886,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
     "id": "jhDcf_HCH4cJ",
-    "outputId": "439aefd8-9ab5-41c4-d783-7832c516fa86"
+    "outputId": "b8561dbc-7808-476f-8384-b319bc4d46dc"
    },
    "outputs": [],
    "source": [
@@ -332,7 +489,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "aJ4cqCtXCZ4_"
+   },
    "source": [
     "##### [Access video transcript here](https://drive.google.com/file/d/1_3Tz0fJAiAq_XS5q7kDE6vu4lKwVSyH6/view?usp=sharing)"
    ]
@@ -344,11 +503,11 @@
    },
    "source": [
     "## 4. Parametric Method\n",
-    "Since Value at Risk essentially is derived using probabilities to determine potential losses, we can use a probability distribution to compute VaR here. In the standard variation, a normal distribution of returns is assumed in the standard case. Just keep in mind that we can use other distributions to calculate this, as will be shown in the second example with a t-distribution. \n",
+    "Since Value at Risk essentially is derived using probabilities to determine potential losses, we can use a probability distribution to compute VaR here. In the standard variation, a normal distribution of returns is assumed in the standard case. Just keep in mind that we can use other distributions to calculate this, as will be shown in the second example with a t-distribution.\n",
     "\n",
     "Example:\n",
     "\n",
-    "Assume you have an account with a mean value of \\\\$10,000 and an annual standard deviation of \\\\$500 and normally distributed returns. We can find that the critical value of a 95% confidence interval of a normal distribution is 1.96. Given these parameters, we can estimate with 95% probability that the most we can lose or gain in a year is: 500 * 1.96 = \\\\$980\n",
+    "Assume you have an account with a mean value of \\\\$10,000 and an annual standard deviation of \\\\$500 and normally distributed returns. We can find that the one tail critical value of a 95% confidence interval of a normal distribution is 1.645. Given these parameters, we can estimate with 95% probability that the most we can lose or gain in a year is: 500 * 1.645 = \\\\$822.5\n",
     "\n",
     "\n",
     "\n",
@@ -369,14 +528,28 @@
     "### 4.1. Implementing VaR - Parametric Method with Normal Distribution\n",
     "To calculate VaR using the parametric method is to assume a normal distribution for our returns and pass in the mean and standard deviation of our data into the `norm.ppf()` method. This is a percent point function and allows us to pass in a confidence interval along with a mean and standard deviation to compute VaR. Even though we discussed that stock returns are non-normal in a previous lesson, this method of VaR calculation is arguably still a more valuable estimate than just using historical returns and will give us greater flexibility when doing Monte Carlo simulations in the near future.\n",
     "\n",
-    "Let's use the AAPL data back to 2010 in order to calculate this. "
+    "Let's use the AAPL data back to 2010 in order to calculate this."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "AQrRwJBcH4cK"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 531,
+     "status": "ok",
+     "timestamp": 1698952424125,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "AQrRwJBcH4cK",
+    "outputId": "5b3e777b-b1ae-4834-9629-a97167bd3d21"
    },
    "outputs": [],
    "source": [
@@ -394,8 +567,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 4,
+     "status": "ok",
+     "timestamp": 1698952425623,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "xScevGS7H4cK",
-    "outputId": "66c24a17-d027-4a7b-cda4-70eaad4b6ac6"
+    "outputId": "2a04ccf4-bea6-45fb-fc5f-357cb25bffcc"
    },
    "outputs": [],
    "source": [
@@ -417,8 +603,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 263,
+     "status": "ok",
+     "timestamp": 1698952429507,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "5e-o0DpyH4cL",
-    "outputId": "60211a8f-e8e6-4e26-d4f7-56253fae14e9"
+    "outputId": "989b62ae-80e5-413c-a8bf-2a36aecb818a"
    },
    "outputs": [],
    "source": [
@@ -443,8 +642,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 217,
+     "status": "ok",
+     "timestamp": 1698952431417,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "KMwiSfSbH4cM",
-    "outputId": "8f8778d3-754f-46ea-f848-6603a7552df6"
+    "outputId": "c2a85e53-a24d-4ec6-cf26-0aac1d8cc38b"
    },
    "outputs": [],
    "source": [
@@ -470,8 +682,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 321
+    },
+    "executionInfo": {
+     "elapsed": 10,
+     "status": "ok",
+     "timestamp": 1698922532389,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
     "id": "6fqjouN5H4cN",
-    "outputId": "222539b6-41e6-46e3-c29f-6cb2a5cdfe1d"
+    "outputId": "964dd77a-c23a-403b-ea2d-938803b205a4"
    },
    "outputs": [],
    "source": [
@@ -480,7 +706,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "07LgynEeCZ5B"
+   },
    "source": [
     "##### [Access video transcript here](https://drive.google.com/file/d/12HhJ2V31itS9f-AGXGl92LeUNEAAixeK/view?usp=sharing)"
    ]
@@ -509,7 +737,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "5O8fif49CZ5B"
+   },
    "source": [
     "**References**\n",
     "\n",
@@ -520,7 +750,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "ir3UG1NgCZ5B"
    },
    "source": [
     "---\n",
@@ -532,7 +763,6 @@
  ],
  "metadata": {
   "colab": {
-   "name": "Module3Lesson4_KM.ipynb",
    "provenance": []
   },
   "kernelspec": {
