--- a/module-4/lesson-1/financial_data_module_4_lesson_1.ipynb
+++ b/module-4/lesson-1/financial_data_module_4_lesson_1.ipynb
@@ -52,6 +52,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 907,
+     "status": "ok",
+     "timestamp": 1698952938733,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "QeRPyJ6gvKkt"
    },
    "outputs": [],
@@ -86,8 +96,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 325,
+     "status": "ok",
+     "timestamp": 1698952943692,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "89HuWOhwvKkv",
-    "outputId": "ba3894bf-fd2d-4f27-c43b-7e4471215d4c"
+    "outputId": "4b05d01b-faf6-4964-f4b5-f59f92ae48e5"
    },
    "outputs": [],
    "source": [
@@ -101,8 +124,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 290,
+     "status": "ok",
+     "timestamp": 1698952953073,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "olpZaxI9vKkw",
-    "outputId": "09988cf7-a11b-475b-d476-fa597f083582"
+    "outputId": "d2f9c99c-bb42-459a-d840-4ef01cd6bd2a"
    },
    "outputs": [],
    "source": [
@@ -122,8 +158,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 279,
+     "status": "ok",
+     "timestamp": 1698952954805,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "JSuRtsdBvKkw",
-    "outputId": "8f309db1-200a-47a6-8637-146c3910a9f1"
+    "outputId": "a9c915f6-9120-4365-b9ad-f85c57eb1c96"
    },
    "outputs": [],
    "source": [
@@ -144,8 +193,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 283,
+     "status": "ok",
+     "timestamp": 1698952958817,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "7nNkvrgHvKkx",
-    "outputId": "c96522b6-cd9b-44a3-8f30-52d6618030d2"
+    "outputId": "459c9cf0-7f55-4bb3-887f-f4bdb9e37cf4"
    },
    "outputs": [],
    "source": [
@@ -156,8 +218,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 7,
+     "status": "ok",
+     "timestamp": 1698952960656,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "J1yJwj2xvKky",
-    "outputId": "bd09815d-7356-45a8-c297-95689396dc94"
+    "outputId": "beda91f6-5f67-4f6e-ec30-153903605516"
    },
    "outputs": [],
    "source": [
@@ -168,8 +243,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 3,
+     "status": "ok",
+     "timestamp": 1698952961734,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "rootVA0GvKky",
-    "outputId": "2cbdd91b-19a5-4e57-e921-1ebb85894d8b"
+    "outputId": "757c01f1-f1f3-4a28-9c6a-cc0b8799a6a6"
    },
    "outputs": [],
    "source": [
@@ -180,8 +268,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 267,
+     "status": "ok",
+     "timestamp": 1698952963178,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "P6wtot4KvKky",
-    "outputId": "f4f062df-3d77-4df8-8c20-7e4bb7bf0210"
+    "outputId": "d7b3a34b-b9a3-4c19-cea5-9f57d99bc981"
    },
    "outputs": [],
    "source": [
@@ -192,8 +293,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 380,
+     "status": "ok",
+     "timestamp": 1698952964461,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "WOFMafjJvKkz",
-    "outputId": "18881948-77fb-4984-92f9-d056d37ab7a9"
+    "outputId": "7f7118ee-556f-40ae-ce0e-d26de3598965"
    },
    "outputs": [],
    "source": [
@@ -204,8 +318,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 291,
+     "status": "ok",
+     "timestamp": 1698952966629,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "GdmwEcylvKkz",
-    "outputId": "fbcdace3-0763-4104-91a6-18cdae32ace4"
+    "outputId": "ac55944f-d1d8-4e99-f3e0-9399124dda2a"
    },
    "outputs": [],
    "source": [
@@ -257,8 +384,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 308,
+     "status": "ok",
+     "timestamp": 1698952971242,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "d10J0wOGvKk0",
-    "outputId": "7478e322-3e94-49b2-8d35-b1e9843af780"
+    "outputId": "d3e00ffe-df0c-4a3c-cc37-e2df74c72ca5"
    },
    "outputs": [],
    "source": [
@@ -282,8 +422,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 4,
+     "status": "ok",
+     "timestamp": 1698952973849,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "IJ0DfRBVvKk0",
-    "outputId": "aad77e34-3119-49b9-a962-3780dd44a638"
+    "outputId": "eddd4c7c-f645-493b-8a32-69184e931193"
    },
    "outputs": [],
    "source": [
@@ -312,8 +465,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 278,
+     "status": "ok",
+     "timestamp": 1698952978521,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "hCy_jQXxvKk0",
-    "outputId": "b5ab78a9-54c5-431c-a1fd-47e1d26ab837"
+    "outputId": "d115ba4a-7154-40da-d9e3-36bb169db808"
    },
    "outputs": [],
    "source": [
@@ -326,8 +492,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 277,
+     "status": "ok",
+     "timestamp": 1698952979945,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "V0F6Ypr9vKk0",
-    "outputId": "1dc7132e-b510-45b7-8701-333cdddc9f01"
+    "outputId": "fb4d14c3-5b33-4bf8-ae10-8f3af3052b50"
    },
    "outputs": [],
    "source": [
@@ -352,7 +531,7 @@
     "The 3 markets are:\n",
     "1. options market: calls and puts\n",
     "2. stock market: underlying stock\n",
-    "3. bond market: a risk-free bond whose term is the option's expiration \n",
+    "3. bond market: a risk-free bond whose term is the option's expiration\n",
     "\n",
     "Now that we've seen some option payoffs and prices, let's continue our applied treatment of options by examining some of the strategies."
    ]
@@ -379,6 +558,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 1194,
+     "status": "ok",
+     "timestamp": 1698952985218,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "gPCfC0AbvKk1"
    },
    "outputs": [],
@@ -406,8 +595,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 592
+    },
+    "executionInfo": {
+     "elapsed": 839,
+     "status": "ok",
+     "timestamp": 1698952988178,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "KcwbhV7uvKk1",
-    "outputId": "b08a0781-8152-420f-c3e3-5191b22af139"
+    "outputId": "a854fbc5-0b1a-45ca-c078-9a15e5e9a4e6"
    },
    "outputs": [],
    "source": [
@@ -428,8 +631,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 592
+    },
+    "executionInfo": {
+     "elapsed": 719,
+     "status": "ok",
+     "timestamp": 1698952992471,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "BbkXScWpvKk1",
-    "outputId": "18272b0f-afce-4932-ab60-9efb4be6c45e"
+    "outputId": "10104772-ad7f-46af-86e8-86d113b7d683"
    },
    "outputs": [],
    "source": [
@@ -447,9 +664,9 @@
     "In fact, we can compute a break-even stock level for a call option.\n",
     "The **break-even stock level** is the price at which the option holder has a net payoff of 0.\n",
     "Call Break-Even Stock Level = Strike + Option Premium\n",
-    "In our example, this is \n",
+    "In our example, this is\n",
     "Call Break-Even Stock Level  = 100 + 2.49\n",
-    "                             = \\$102.49 \n",
+    "                             = \\$102.49\n",
     "The break-even is where the stock payoff crosses the x-axis.\n",
     "\n",
     "Let's see the seller's payoff."
@@ -459,8 +676,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 591
+    },
+    "executionInfo": {
+     "elapsed": 773,
+     "status": "ok",
+     "timestamp": 1698952996901,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "tk59wt7ivKk1",
-    "outputId": "7b82804a-7cc1-494b-e0d1-885a63a8c3d5"
+    "outputId": "4e7a52fc-2c5e-4946-b849-343aeab5b2da"
    },
    "outputs": [],
    "source": [
@@ -480,8 +711,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 1000
+    },
+    "executionInfo": {
+     "elapsed": 1408,
+     "status": "ok",
+     "timestamp": 1698953001446,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "lypJ4OmNvKk2",
-    "outputId": "cb01ef05-ebe9-4f28-d9f7-7da0ae6e4a39"
+    "outputId": "0969e48c-bcf9-4c9b-d5a9-341d22b9875e"
    },
    "outputs": [],
    "source": [
@@ -515,9 +760,9 @@
     "id": "LIehF4WVvKk2"
    },
    "source": [
-    "Notice the non-linearity in each graph. The strike is where the change in slope occurs. To one side of the strike, the payoff is a flat line. To the other side of the strike, the payoff is 45 degrees from the x-axis. \n",
+    "Notice the non-linearity in each graph. The strike is where the change in slope occurs. To one side of the strike, the payoff is a flat line. To the other side of the strike, the payoff is 45 degrees from the x-axis.\n",
     "\n",
-    " - For long positions, the slope is upwards. \n",
+    " - For long positions, the slope is upwards.\n",
     " - For short positions, the slope is downwards.\n",
     "\n",
     "Note that long calls have unlimited upside; therefore, short calls have unlimited downside.\n",
@@ -535,8 +780,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 1000
+    },
+    "executionInfo": {
+     "elapsed": 1185,
+     "status": "ok",
+     "timestamp": 1698953007140,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "C9vHCnpdvKk2",
-    "outputId": "be965c02-f860-40ff-d006-0d3ca7312545"
+    "outputId": "fce46dff-cec1-4f08-f42e-ef793065171e"
    },
    "outputs": [],
    "source": [
@@ -550,14 +809,13 @@
     "id": "9-I7zsaPvKk2"
    },
    "source": [
-    "We see the same story: \n",
+    "We see the same story:\n",
     "The long and short payoffs are mirror images of each other, reflecting the zero-sum game of options.\n",
     "At any given stock price, one side has a profit (shown in green) and the other side has a loss (shown in red).\n",
     "Each graph is non-linear.  \n",
     "The slopes are still 45 degrees; however, for the long position, the slope is negative,\n",
     "and for the short position, the slope is positive.\n",
-    "Note: Even if the option is ITM, the buyer still needs to cover the cost of the premium for the option to be profitable. Also, it is relatively easy to lose 100%.\n",
-    " "
+    "Note: Even if the option is ITM, the buyer still needs to cover the cost of the premium for the option to be profitable. Also, it is relatively easy to lose 100%.\n"
    ]
   },
   {
@@ -592,8 +850,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 592
+    },
+    "executionInfo": {
+     "elapsed": 1235,
+     "status": "ok",
+     "timestamp": 1698953012330,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "U4iZW-qGvKk2",
-    "outputId": "65921390-5703-4da5-f34e-d57154861977"
+    "outputId": "aafbd77e-4d5a-4eb0-e372-9bc4b09c71bf"
    },
    "outputs": [],
    "source": [
@@ -630,8 +902,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 276,
+     "status": "ok",
+     "timestamp": 1698953015724,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "xbHdWP_mvKk2",
-    "outputId": "611329c8-1f59-4e26-d4d9-3d3c70672fc5"
+    "outputId": "222069f1-9df0-4efb-ee00-e98a513cfc59"
    },
    "outputs": [],
    "source": [
@@ -657,8 +942,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 592
+    },
+    "executionInfo": {
+     "elapsed": 1039,
+     "status": "ok",
+     "timestamp": 1698953019289,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "Z3op4Y5FvKk3",
-    "outputId": "d7683bdb-84c0-4852-8aac-22caa4994cdd"
+    "outputId": "ef02da7a-8dfa-4f1f-91a9-b4695ee83d67"
    },
    "outputs": [],
    "source": [
@@ -691,7 +990,7 @@
     "\n",
     "The iron butterfly involves a long straddle (buying a call and put at the same strike) and also a short straddle (selling an OTM put at a low strike and selling an OTM call at a high strike).\n",
     "The iron butterfly gives up a potential upside for a rebate of the option premium.\n",
-    "Individually, we have \n",
+    "Individually, we have\n",
     "\n",
     "1 short put at 90  </br>\n",
     "1 long call at 100  </br>\n",
@@ -701,16 +1000,15 @@
     "The long iron butterfly trader is conservatively long volatility: even if volatility increases significantly, the long iron butterfly's P&L is capped at about \\\\$5.  That's because the long call's gain past \\\\$110 level is offset by the loss in the short call at strike \\\\$110.\n",
     "\n",
     "The long straddle trader is aggressively long volatility: the more volatility, the more their P&L.\n",
-    "For example, if the final stock price is 115, then \n",
+    "For example, if the final stock price is 115, then\n",
     "\n",
-    "short put(90)   =  0  </br>\n",
+    "\n",
     "long put(100)   =  0  </br>\n",
     "long call(100)  = 15  </br>\n",
-    "short call(110) = -5  </br>\n",
-    "Net Profit =     \\\\$10  </br>\n",
+    "Net Profit =     \\\\$15  </br>\n",
     "\n",
-    "Indeed, \\\\$10 is the maximum revenue. When the \\\\$4.39 cost is taken into consideration, the maximum P&L is \n",
-    "\\\\$10 - \\\\$4.39 = \\\\$5.61\n",
+    "Indeed, \\\\$15 is the maximum revenue. When the \\\\$4.59 cost is taken into consideration, the maximum P&L is\n",
+    "\\\\$15 - \\\\$4.59 = \\\\$10.41\n",
     "\n"
    ]
   },
@@ -730,8 +1028,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 592
+    },
+    "executionInfo": {
+     "elapsed": 1043,
+     "status": "ok",
+     "timestamp": 1698953091309,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "6Fpnb07JvKk3",
-    "outputId": "1ac5b193-026a-4f5a-a1e5-bead4356cbba"
+    "outputId": "09b3e56b-cf20-4346-d8da-07105e8e4598"
    },
    "outputs": [],
    "source": [
@@ -755,7 +1067,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "iEpDZ7pACYfB"
    },
    "source": [
     "---\n",
@@ -767,8 +1080,6 @@
  ],
  "metadata": {
   "colab": {
-   "collapsed_sections": [],
-   "name": "DFT_Module 4_Lesson 1.ipynb",
    "provenance": []
   },
   "kernelspec": {
