--- a/module-4/lesson-2/financial_data_module_4_lesson_2.ipynb
+++ b/module-4/lesson-2/financial_data_module_4_lesson_2.ipynb
@@ -53,6 +53,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 1568,
+     "status": "ok",
+     "timestamp": 1698953812098,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "P-purqaqiJOa"
    },
    "outputs": [],
@@ -79,8 +89,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 235,
+     "status": "ok",
+     "timestamp": 1698953813825,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "8oY0pas2iJOb",
-    "outputId": "67cf8b9d-9b55-41df-b2b7-8eae1c21adf0"
+    "outputId": "0e1c9fb0-4aab-4d4d-ddf3-22648befc527"
    },
    "outputs": [],
    "source": [
@@ -108,6 +131,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 199,
+     "status": "ok",
+     "timestamp": 1698953816387,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "b7stWjfliJOd"
    },
    "outputs": [],
@@ -131,6 +164,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 218,
+     "status": "ok",
+     "timestamp": 1698953818460,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "alA_bntiiJOf"
    },
    "outputs": [],
@@ -161,6 +204,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 343,
+     "status": "ok",
+     "timestamp": 1698953826974,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "bn7EM-tfiJOh"
    },
    "outputs": [],
@@ -190,6 +243,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 209,
+     "status": "ok",
+     "timestamp": 1698953829101,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "oc0gad-WiJOj"
    },
    "outputs": [],
@@ -211,8 +274,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 472
+    },
+    "executionInfo": {
+     "elapsed": 665,
+     "status": "ok",
+     "timestamp": 1698953830634,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "ckp62q3jiJOj",
-    "outputId": "3110b02e-4a5f-41f7-c9c2-6f2e412f77e5"
+    "outputId": "f5da917e-6245-406a-dfaf-d6375f2e0fe2"
    },
    "outputs": [],
    "source": [
@@ -238,6 +315,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 212,
+     "status": "ok",
+     "timestamp": 1698953840306,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "kIZrcLnYiJOk"
    },
    "outputs": [],
@@ -272,8 +359,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 472
+    },
+    "executionInfo": {
+     "elapsed": 645,
+     "status": "ok",
+     "timestamp": 1698953843325,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "zfPDXG_NiJOl",
-    "outputId": "1f864eec-33bb-4159-d538-9e93ef700bba"
+    "outputId": "486c5c0c-34ce-4f0a-b5b0-1c9acbde15ee"
    },
    "outputs": [],
    "source": [
@@ -291,8 +392,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 310,
+     "status": "ok",
+     "timestamp": 1698953846375,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "374YMNPwiJOm",
-    "outputId": "c39adfe1-553c-4834-bfa9-8faac68f042c"
+    "outputId": "a29c78bf-3656-4de2-bafc-e39d0f8fabf7"
    },
    "outputs": [],
    "source": [
@@ -326,8 +440,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 472
+    },
+    "executionInfo": {
+     "elapsed": 743,
+     "status": "ok",
+     "timestamp": 1698953852226,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "ePOjJ3YNiJOn",
-    "outputId": "bc04089a-fb36-4492-e37f-ede0fd05b58f"
+    "outputId": "5a0256ab-4ad8-4985-d530-02f4d3be1715"
    },
    "outputs": [],
    "source": [
@@ -348,8 +476,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 472
+    },
+    "executionInfo": {
+     "elapsed": 399,
+     "status": "ok",
+     "timestamp": 1698953857754,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "XeU9TTPsiJOo",
-    "outputId": "20f0be32-33d1-41cd-c039-202554754581"
+    "outputId": "6cfda509-4507-4ec6-d9a2-2643261395c2"
    },
    "outputs": [],
    "source": [
@@ -373,13 +515,13 @@
    },
    "source": [
     "## 4. Time Value Can Hurt European Puts\n",
-    "With more time, a significant difference appears. Recall that \n",
+    "With more time, a significant difference appears. Recall that\n",
     "\n",
     "$$\\text{option value} = \\text{intrinsic value} + \\text{time value}$$\n",
     "\n",
     "The option value is the blue curve. The intrinsic value is the orange curve; it is the same as the payoff. The time value is therefore the vertical distance between these two curves.\n",
     "\n",
-    "$$\\text{time value} = \\text{option value} - \\text{intrinsic value}$$ \n",
+    "$$\\text{time value} = \\text{option value} - \\text{intrinsic value}$$\n",
     "\n",
     "For a deep in-the-money (ITM) call, the time value is positive. In other words, the blue curve (option price) exceeds the orange curve (option payoff). More time for a call can lead to higher payoffs. Calls have unlimited payoffs.\n",
     "\n",
@@ -387,7 +529,7 @@
     "\n",
     "Remember that the exercise style is European. When a put is deep ITM, we would probably want to exercise right away.\n",
     "\n",
-    "If we could, we would collect the difference between the strike and stock, and we can invest those proceeds at the risk-free rate. Unlike long calls, long put positions have a bounded profit. The most they could make is the strike, and that assumes the stock prices go to zero. If we were able to exercise that sooner (as in an American exercise style) rather than later (as in a European exercise style), we could earn even more by earning the risk-free rate. But all the graphs we have presented here are for European options. This is the beauty of graphing. \n"
+    "If we could, we would collect the difference between the strike and stock, and we can invest those proceeds at the risk-free rate. Unlike long calls, long put positions have a bounded profit. The most they could make is the strike, and that assumes the stock prices go to zero. If we were able to exercise that sooner (as in an American exercise style) rather than later (as in a European exercise style), we could earn even more by earning the risk-free rate. But all the graphs we have presented here are for European options. This is the beauty of graphing.\n"
    ]
   },
   {
@@ -409,8 +551,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 472
+    },
+    "executionInfo": {
+     "elapsed": 1641,
+     "status": "ok",
+     "timestamp": 1698953863980,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "MBVmXzGuiJOp",
-    "outputId": "71e939c0-3cf1-4843-997a-0909e305e461"
+    "outputId": "3ca52baa-9c5f-48da-87b3-295c9b2c311c"
    },
    "outputs": [],
    "source": [
@@ -433,8 +589,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 472
+    },
+    "executionInfo": {
+     "elapsed": 618,
+     "status": "ok",
+     "timestamp": 1698953867610,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "eFPfM4v8iJOp",
-    "outputId": "098cd1f6-2381-4d9d-f9e2-0679ed770085"
+    "outputId": "72ba2edf-0c99-4971-fd82-bafd6af2b7a9"
    },
    "outputs": [],
    "source": [
@@ -496,8 +666,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 472
+    },
+    "executionInfo": {
+     "elapsed": 673,
+     "status": "ok",
+     "timestamp": 1698953887097,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "MbTQ-OefiJOq",
-    "outputId": "74c49c20-20f7-4b89-db6e-5c12650d48f7"
+    "outputId": "73650b7c-0994-4ec5-e76b-857f4be4ff1e"
    },
    "outputs": [],
    "source": [
@@ -561,8 +745,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 472
+    },
+    "executionInfo": {
+     "elapsed": 622,
+     "status": "ok",
+     "timestamp": 1698953904021,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "SPvM75oYiJOr",
-    "outputId": "b26eb72f-fc43-4c42-c2de-112ead372e0d"
+    "outputId": "585b9308-7844-4259-fad1-c58aa28612bd"
    },
    "outputs": [],
    "source": [
@@ -620,8 +818,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 430
+    },
+    "executionInfo": {
+     "elapsed": 585,
+     "status": "ok",
+     "timestamp": 1698953912442,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "Gu07Q4eRiJOs",
-    "outputId": "2160e602-97f8-4a44-ac05-df0c544ca3fc"
+    "outputId": "328a88b0-9642-4c72-e231-b48c961014f6"
    },
    "outputs": [],
    "source": [
@@ -659,8 +871,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 430
+    },
+    "executionInfo": {
+     "elapsed": 634,
+     "status": "ok",
+     "timestamp": 1698953918764,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "KPlhHTqniJOu",
-    "outputId": "7315ff14-93aa-4e2d-97cb-0e6f38929990"
+    "outputId": "c00b0cf5-0e74-4566-e1e6-f875c83137a2"
    },
    "outputs": [],
    "source": [
@@ -687,7 +913,7 @@
     "id": "bH6WxwXfiJOu"
    },
    "source": [
-    "When you are long a vanilla option (call or put), volatility is your friend.  The greater the volatility, the greater the option is worth. "
+    "When you are long a vanilla option (call or put), volatility is your friend.  The greater the volatility, the greater the option is worth."
    ]
   },
   {
@@ -706,8 +932,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 430
+    },
+    "executionInfo": {
+     "elapsed": 470,
+     "status": "ok",
+     "timestamp": 1698953923888,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "PthmXkpEiJOv",
-    "outputId": "98590d31-3f3a-43c5-bb1d-cdf1c0e7fc01"
+    "outputId": "5797c080-1533-4ce8-e438-371297dd48f9"
    },
    "outputs": [],
    "source": [
@@ -732,8 +972,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 430
+    },
+    "executionInfo": {
+     "elapsed": 457,
+     "status": "ok",
+     "timestamp": 1698953928173,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "mA9oh0hriJOv",
-    "outputId": "0d2301d9-5625-4be9-854c-8338da9b75d4"
+    "outputId": "ddcefc31-6658-433c-e6d3-ce532ce7f4b8"
    },
    "outputs": [],
    "source": [
@@ -787,7 +1041,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "Ru_lYW9tCVpb"
    },
    "source": [
     "---\n",
@@ -799,9 +1054,8 @@
  ],
  "metadata": {
   "colab": {
-   "collapsed_sections": [],
-   "name": "DFT_Module 4_Lesson 2.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
