--- a/module-4/lesson-3/financial_data_module_4_lesson_3.ipynb
+++ b/module-4/lesson-3/financial_data_module_4_lesson_3.ipynb
@@ -52,6 +52,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 215,
+     "status": "ok",
+     "timestamp": 1698954300258,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "exE9eVte8L0Z"
    },
    "outputs": [],
@@ -73,7 +83,7 @@
    "source": [
     "## 1. Handling Option Complexity\n",
     "As an asset, options are N times more complicated than stocks\n",
-    "(where N > 1 and is left up to you to determine the effects of \n",
+    "(where N > 1 and is left up to you to determine the effects of\n",
     "non-linearity, leverage, kurtosis, hedging, model risk, and other issues).\n",
     "\n",
     "One of the reasons options are more complicated than stocks is the abundant array of options to choose from.\n",
@@ -120,6 +130,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 219,
+     "status": "ok",
+     "timestamp": 1698954312417,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "5lw0WuyL8L0e"
    },
    "outputs": [],
@@ -197,8 +217,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 1248,
+     "status": "ok",
+     "timestamp": 1698954317055,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "XwctHul38L0h",
-    "outputId": "15338a8c-35cb-4add-c20d-630735c48df9"
+    "outputId": "33dde325-b8ef-448e-a707-ff3bab48d478"
    },
    "outputs": [],
    "source": [
@@ -212,7 +245,7 @@
     "id": "FK-X3rz58L0i"
    },
    "source": [
-    "As of the time we ran this code, we have 15 different expiration dates.\n",
+    "As of the time we ran this code, we have 17 different expiration dates.\n",
     "(You may have a different number.)\n",
     "Let's see how varied the dates are."
    ]
@@ -222,11 +255,20 @@
    "execution_count": null,
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 165
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 174,
+     "status": "ok",
+     "timestamp": 1698954325134,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
     },
     "id": "q83QmW5-8L0i",
-    "outputId": "d48c2cf0-da0e-4a5c-954a-21b914af0ac7"
+    "outputId": "7355e3f8-9308-4101-8970-49595df0f7c5"
    },
    "outputs": [],
    "source": [
@@ -248,8 +290,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 1500,
+     "status": "ok",
+     "timestamp": 1698954330054,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "fGZZBnGM8L0j",
-    "outputId": "d41cf94a-5622-4ca4-9e5b-92e7d23abb16"
+    "outputId": "253f71d7-90c7-48e6-b2b1-c40796a17b36"
    },
    "outputs": [],
    "source": [
@@ -269,8 +324,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 206
+    },
+    "executionInfo": {
+     "elapsed": 202,
+     "status": "ok",
+     "timestamp": 1698954332729,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "wJmb_Sox8L0j",
-    "outputId": "2db057b0-431b-42b0-9962-5e1683959c3a"
+    "outputId": "51e164a6-5f46-41e5-b108-fe80943f670f"
    },
    "outputs": [],
    "source": [
@@ -281,8 +350,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 4,
+     "status": "ok",
+     "timestamp": 1698954335297,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "0MM3kZLV8L0j",
-    "outputId": "600622e0-fa8c-42c5-e382-e8be665bcca2"
+    "outputId": "2fe26c85-bcf6-4940-b17c-10ec0b21c241"
    },
    "outputs": [],
    "source": [
@@ -334,8 +416,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 200,
+     "status": "ok",
+     "timestamp": 1698954339506,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "SjRIWGrM8L0l",
-    "outputId": "5d19e1e1-7ea2-4f2b-f8c1-68c241e20b71"
+    "outputId": "1b86f7ea-080e-4df2-ac65-afeef41ee74a"
    },
    "outputs": [],
    "source": [
@@ -356,8 +451,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 182,
+     "status": "ok",
+     "timestamp": 1698954341755,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "HmmbWs1U8L0l",
-    "outputId": "ea91362e-0c57-4c4a-d138-b5c024c8ff3d"
+    "outputId": "74128e7e-18bd-44af-fab1-80a0e43188d0"
    },
    "outputs": [],
    "source": [
@@ -402,6 +510,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 188,
+     "status": "ok",
+     "timestamp": 1698954345228,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "jrDeSbtA8L0m"
    },
    "outputs": [],
@@ -414,8 +532,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 449
+    },
+    "executionInfo": {
+     "elapsed": 429,
+     "status": "ok",
+     "timestamp": 1698954347186,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "0JVRhqs_8L0m",
-    "outputId": "3ff7fabc-e540-4382-cbba-45b01ac249b2"
+    "outputId": "eac3f4a9-f5f8-426c-88e1-22f6ae3e4ef9"
    },
    "outputs": [],
    "source": [
@@ -428,8 +560,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 449
+    },
+    "executionInfo": {
+     "elapsed": 511,
+     "status": "ok",
+     "timestamp": 1698954350376,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "yuIuMaOo8L0m",
-    "outputId": "710dec36-5d10-499a-9129-88bce846b5a9"
+    "outputId": "f9bf1aa5-ddf6-45b1-8f8b-a53d5750ad3a"
    },
    "outputs": [],
    "source": [
@@ -476,8 +622,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 1802,
+     "status": "ok",
+     "timestamp": 1698954355780,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "f7g7DpeP8L0n",
-    "outputId": "954b0b29-1fe2-49e9-a890-3e54673d3c58"
+    "outputId": "75a77354-748d-4eb4-ce68-a841be961fd4"
    },
    "outputs": [],
    "source": [
@@ -502,8 +661,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 450
+    },
+    "executionInfo": {
+     "elapsed": 668,
+     "status": "ok",
+     "timestamp": 1698954358741,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "cqykmRv68L0n",
-    "outputId": "5118c0ba-dbf5-4b62-e7f6-6a1575b54485"
+    "outputId": "09886190-3727-498a-d7de-ed5c147cda42"
    },
    "outputs": [],
    "source": [
@@ -527,8 +700,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 450
+    },
+    "executionInfo": {
+     "elapsed": 585,
+     "status": "ok",
+     "timestamp": 1698954361869,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "hconJ9Mc8L0o",
-    "outputId": "7deff1cb-7777-4dc4-e798-79d8c9e7ee99"
+    "outputId": "7e91efc5-47f4-481e-f06d-d813c2ac2ecf"
    },
    "outputs": [],
    "source": [
@@ -561,14 +748,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "CKaG7TDG8L0o"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "for index in callsNflx.index:\n",
-    "    if \"-\" == callsNflx[\"Volume\"][index]:\n",
-    "        callsNflx.loc[index, \"Volume\"] = 0"
+    "callsNflx[\"Volume\"] = callsNflx[\"Volume\"].replace(\"-\", 0)"
    ]
   },
   {
@@ -584,6 +767,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 2,
+     "status": "ok",
+     "timestamp": 1698954367449,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "VLmOYUio8L0o"
    },
    "outputs": [],
@@ -603,16 +796,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "XLCQ5m3X8L0p"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "for index in putsNflx.index:\n",
-    "    if \"-\" == putsNflx[\"Volume\"][index]:\n",
-    "        putsNflx.loc[index, \"Volume\"] = 0\n",
-    "\n",
-    "putsNflx.Volume = putsNflx.Volume.astype(float)"
+    "putsNflx[\"Volume\"] = putsNflx[\"Volume\"].replace(\"-\", 0).astype(float)"
    ]
   },
   {
@@ -628,6 +815,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 170,
+     "status": "ok",
+     "timestamp": 1698954372832,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "qEJJvArz8L0p"
    },
    "outputs": [],
@@ -659,6 +856,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 2,
+     "status": "ok",
+     "timestamp": 1698954374415,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "2X_NabpF8L0p"
    },
    "outputs": [],
@@ -687,8 +894,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 261,
+     "status": "ok",
+     "timestamp": 1698954377077,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "nfwj0OxG8L0p",
-    "outputId": "fd7d4164-0b24-47c1-d0d3-95b40512a420"
+    "outputId": "97d8b6f2-7d1c-4394-be7f-dab330352553"
    },
    "outputs": [],
    "source": [
@@ -701,8 +921,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 472
+    },
+    "executionInfo": {
+     "elapsed": 872,
+     "status": "ok",
+     "timestamp": 1698954379904,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "U6J52AbZ8L0p",
-    "outputId": "0a42f054-86cf-400c-d37e-44b6d99ed258"
+    "outputId": "3b460b18-4dd8-414b-81d3-91fc1301538a"
    },
    "outputs": [],
    "source": [
@@ -724,7 +958,7 @@
     "id": "HxmXiS6E8L0q"
    },
    "source": [
-    "What is so interesting about open interest? \n",
+    "What is so interesting about open interest?\n",
     "Meaningful data ratios derive from these open interest numbers.\n",
     "Let's define one.\n",
     "\n",
@@ -738,8 +972,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 191,
+     "status": "ok",
+     "timestamp": 1698954385591,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "X3DhiXaB8L0q",
-    "outputId": "2d2d59e1-fd49-4314-92d2-2a926b06294c"
+    "outputId": "522078e9-e7d2-42d8-94cf-24e7c0ff6a4a"
    },
    "outputs": [],
    "source": [
@@ -755,8 +1002,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 186,
+     "status": "ok",
+     "timestamp": 1698954388104,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "15n1ERSR8L0q",
-    "outputId": "384dd767-c681-493d-df27-779e362e0f24"
+    "outputId": "795d008f-e850-4e6d-8b47-45df186a767a"
    },
    "outputs": [],
    "source": [
@@ -781,8 +1041,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 20136,
+     "status": "ok",
+     "timestamp": 1698954411213,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "bxnUG8928L0q",
-    "outputId": "ecf6888d-9b2f-459a-8121-63c5acd1cb36"
+    "outputId": "a89a1a5c-1b2f-4acc-c3fd-2af34a1d6c78"
    },
    "outputs": [],
    "source": [
@@ -805,8 +1078,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 177,
+     "status": "ok",
+     "timestamp": 1698954413972,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "SJX2418u8L0q",
-    "outputId": "b9837a6b-37a1-48fd-8e02-7341b8f77d86"
+    "outputId": "52a0ea30-4fed-4365-bc09-28f0b9740d21"
    },
    "outputs": [],
    "source": [
@@ -827,8 +1113,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 179,
+     "status": "ok",
+     "timestamp": 1698954417520,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "DEpvCBwS8L0r",
-    "outputId": "428fbecc-0a82-4f62-b9f3-e4fa8eda45cf"
+    "outputId": "ca87b2f7-7d25-4f1e-8562-3796567f5c3d"
    },
    "outputs": [],
    "source": [
@@ -840,8 +1139,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 177,
+     "status": "ok",
+     "timestamp": 1698954420630,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "3SQrh79W8L0r",
-    "outputId": "f716e2ae-42c5-4829-ca8c-e8e497ee4c1d"
+    "outputId": "1763bf0e-9e19-41d8-8a8c-80fdd1dfb4fe"
    },
    "outputs": [],
    "source": [
@@ -861,8 +1173,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 233,
+     "status": "ok",
+     "timestamp": 1698954423098,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "ySJuo6hr8L0r",
-    "outputId": "6ef814d7-0539-43a1-8d8d-3c6710f54bc4"
+    "outputId": "43d62754-440a-4831-d0d0-9c23f5c10893"
    },
    "outputs": [],
    "source": [
@@ -883,8 +1208,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 167,
+     "status": "ok",
+     "timestamp": 1698954426577,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "0Bvn7TtQ8L0r",
-    "outputId": "db016abc-94ea-4a36-998b-54dc2c1bbd7a"
+    "outputId": "208317a9-099a-4942-a5f3-d3c357236386"
    },
    "outputs": [],
    "source": [
@@ -896,8 +1234,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 237
+    },
+    "executionInfo": {
+     "elapsed": 169,
+     "status": "ok",
+     "timestamp": 1698954429107,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "-BEsRQK98L0r",
-    "outputId": "475becf6-dfe0-4481-b767-b413ce6cccdf"
+    "outputId": "54ad0b5f-13fd-4121-ef6b-e557d63b55f0"
    },
    "outputs": [],
    "source": [
@@ -918,14 +1270,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 472
+    },
+    "executionInfo": {
+     "elapsed": 628,
+     "status": "ok",
+     "timestamp": 1698954433238,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "z_5kfU5n8L0s",
-    "outputId": "7c6efd74-519a-47d2-bf02-9c32b6fe5791"
+    "outputId": "9236de61-976a-4cc3-eb87-3de939f13ae5"
    },
    "outputs": [],
    "source": [
     "# Compute the bid-ask spread\n",
     "z4 = z2[(z2[\"Strike\"] >= 300) & (z2[\"Strike\"] <= 400)]\n",
-    "plt.plot(list(z4[\"Strike\"]), list(z4[\"Ask\"] - z4[\"Bid\"]))\n",
+    "plt.plot(list(z4[\"Strike\"]), list(z4[\"Ask\"].astype(float) - z4[\"Bid\"].astype(float)))\n",
     "plt.title(\"Bid-Ask Spread as a Function of Strike\")\n",
     "plt.xlabel(\"Strike\")\n",
     "plt.ylabel(\"Bid-Ask Spread\");"
@@ -955,7 +1321,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "no1DyvFBGGZg"
    },
    "source": [
     "---\n",
@@ -975,8 +1342,8 @@
     "ZlB_9OW38L0q",
     "P_ZC607S8kBX"
    ],
-   "name": "DFT_Module 4_Lesson 3.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
