--- a/module-4/lesson-4/financial_data_module_4_lesson_4.ipynb
+++ b/module-4/lesson-4/financial_data_module_4_lesson_4.ipynb
@@ -71,6 +71,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 4190,
+     "status": "ok",
+     "timestamp": 1698954690908,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "TSdptucC4AWk"
    },
    "outputs": [],
@@ -79,7 +89,8 @@
     "\n",
     "import opstrat as op\n",
     "import pandas as pd\n",
-    "import pandas_datareader as pdr\n",
+    "import requests\n",
+    "import yfinance as yf\n",
     "from optionprice import Option\n",
     "from yahoo_fin import options"
    ]
@@ -88,25 +99,79 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "IMKdD5qE4AWl",
-    "outputId": "81eb9e29-58fb-4228-a011-78ead834711c"
+    "id": "IMKdD5qE4AWl"
    },
    "outputs": [],
    "source": [
     "# https://analyticsindiamag.com/top-python-libraries-to-get-historical-stock-data-with-code/\n",
-    "# Alpha vintage\n",
-    "myApiKey = \"O2ZMKAVEVDVQ4RWF\"\n",
     "\n",
-    "# original ts alphavantage premium endpoint that no longer works\n",
-    "# ts = pdr.av.time_series.AVTimeSeriesReader(\"NFLX\", api_key=myApiKey)\n",
-    "# so we will use following which forces free function\n",
-    "ts = pdr.av.time_series.AVTimeSeriesReader(\n",
-    "    \"NFLX\", function=\"TIME_SERIES_DAILY_ADJUSTED\", api_key=myApiKey\n",
+    "# YOU CAN FIND YOUR OWN ALPHAVANTAGE KEY ON YOUR WQU PROFILE SETTINGS PAGE\n",
+    "myApiKey = \"960c8de34c8a98412e839a5fbdfe0cd221f1a3c4c8c9d8d325fe57f8075993e906067d2dab584c82d65e03bced836f16a7a13608bd0cea16341dc327e575e7f484bfec871c14ad2efdb4776aa99c2ce8981e7be03467bf5df642de42876df30c32e58bb8084da9be41373c124a846a61aebe01d0321d66aa09dd87a38836e309\"\n",
+    "\n",
+    "# Endpoint for getting data from AlphaVantage\n",
+    "url = (\n",
+    "    \"https://www.alphavantage.co/query?\"\n",
+    "    \"function=TIME_SERIES_DAILY&\"\n",
+    "    \"symbol=NFLX&\"\n",
+    "    f\"apikey={myApiKey}\"\n",
     ")\n",
-    "df = ts.read()\n",
-    "df.index = pd.to_datetime(df.index, format=\"%Y-%m-%d\")\n",
+    "\n",
+    "# Make GET request\n",
+    "response = requests.get(url=url)\n",
+    "\n",
+    "# Get stock data from response\n",
+    "response_data = response.json()\n",
+    "stock_data = response_data[\"Time Series (Daily)\"]\n",
+    "\n",
+    "# Load stock data into DataFrame\n",
+    "df = pd.DataFrame.from_dict(stock_data, orient=\"index\", dtype=float)\n",
+    "\n",
+    "# Rename columns\n",
+    "df.columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"]\n",
+    "\n",
     "# plotting the opening and closing value\n",
     "df[[\"close\"]].plot();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "MtEgkoRmk6zq"
+   },
+   "source": [
+    "Note: This cell currently results an error due to subscription limitation associated with NFLX endpoint. AlphaVantage often revise API or plans requiring the code modifications after change. NFLX used to be on free plan but moved to premium. You can try for example 'IBM' ticker to test functionality in above code.\n",
+    "\n",
+    "We can alternatively use `yfinance` to get NFLX data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 440
+    },
+    "executionInfo": {
+     "elapsed": 1974,
+     "status": "ok",
+     "timestamp": 1698955398093,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "uiIAi8Cact6O",
+    "outputId": "0e22b489-74b9-49b7-b5d9-1b614c09cb7e"
+   },
+   "outputs": [],
+   "source": [
+    "# Alternatively, we can use yfinance since NFLX close is given in its adjusted form.\n",
+    "\n",
+    "ts = yf.download(\"NFLX\")[\"Adj Close\"]\n",
+    "\n",
+    "ts.plot();"
    ]
   },
   {
@@ -161,6 +226,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 3,
+     "status": "ok",
+     "timestamp": 1698955403447,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "oXSEvBfl4AWn"
    },
    "outputs": [],
@@ -173,6 +248,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 2,
+     "status": "ok",
+     "timestamp": 1698955404764,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "6gVlLQeZ4AWo"
    },
    "outputs": [],
@@ -185,8 +270,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 3,
+     "status": "ok",
+     "timestamp": 1698955406087,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "GYkkVlVi4AWo",
-    "outputId": "714f792c-8f32-40a3-cb05-c0f10046338d"
+    "outputId": "54c60e26-fa74-4b65-cbb6-bbac5d8c4c5d"
    },
    "outputs": [],
    "source": [
@@ -199,6 +297,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 197,
+     "status": "ok",
+     "timestamp": 1698955408174,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "yuNTiQfB4AWo"
    },
    "outputs": [],
@@ -220,8 +328,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 186,
+     "status": "ok",
+     "timestamp": 1698955410472,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "4XO02avO4AWp",
-    "outputId": "10ff4f59-252f-415b-801b-b3fcb6b6d0b2"
+    "outputId": "e554ea1a-8a87-4b99-c4bb-2af353d706d8"
    },
    "outputs": [],
    "source": [
@@ -242,6 +363,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 215,
+     "status": "ok",
+     "timestamp": 1698955412772,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "aowhIab14AWp"
    },
    "outputs": [],
@@ -254,8 +385,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 193,
+     "status": "ok",
+     "timestamp": 1698955414462,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "wTte4tlL4AWq",
-    "outputId": "031b3047-2905-411e-bbc5-ac0984e2ed48"
+    "outputId": "112d87b2-90c7-4f23-db22-056ec7e6effc"
    },
    "outputs": [],
    "source": [
@@ -298,6 +442,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 227,
+     "status": "ok",
+     "timestamp": 1698955418166,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "vWBGvmn-4AWq"
    },
    "outputs": [],
@@ -310,8 +464,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 191,
+     "status": "ok",
+     "timestamp": 1698955419432,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "CBA9blwQ4AWq",
-    "outputId": "daf9c28e-1b5a-4162-e2c8-dc08c3d48cf4"
+    "outputId": "261b082a-61e9-4fd4-b839-0ef7ec871fc4"
    },
    "outputs": [],
    "source": [
@@ -325,8 +492,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 190,
+     "status": "ok",
+     "timestamp": 1698955420962,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "vrUSxlKl4AWq",
-    "outputId": "9874fe8f-4f3e-46f6-a7e0-19226f4bc796"
+    "outputId": "df83c18c-b554-4037-facc-ff0aafd52a8b"
    },
    "outputs": [],
    "source": [
@@ -358,7 +538,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 1183,
+     "status": "ok",
+     "timestamp": 1698955425600,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "DUKaMy89CU-S",
+    "outputId": "a183976d-98c3-4c0f-c05c-e836a8a355d3"
+   },
    "outputs": [],
    "source": [
     "nflx_dates = options.get_expiration_dates(\"nflx\")\n",
@@ -369,8 +565,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 1213,
+     "status": "ok",
+     "timestamp": 1698955427828,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "Ib1-qh8D4AWr",
-    "outputId": "dbc83232-5afe-4623-f2a2-5618a58b0986"
+    "outputId": "e919a307-dc7e-45ef-eabe-6a21c6d540f7"
    },
    "outputs": [],
    "source": [
@@ -396,8 +605,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 115
+    },
+    "executionInfo": {
+     "elapsed": 232,
+     "status": "ok",
+     "timestamp": 1698955430173,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "6axyzp5J4AWr",
-    "outputId": "a4dffff4-6f55-4fdc-b57d-97631e7a9715"
+    "outputId": "e0097ccf-914a-4757-8d40-c5bf10fb3eb2"
    },
    "outputs": [],
    "source": [
@@ -410,8 +633,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 186,
+     "status": "ok",
+     "timestamp": 1698955432155,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "gYgI5GSH4AWr",
-    "outputId": "ba576633-d8e8-4069-ee30-83dc16fc479f"
+    "outputId": "0a2c023f-c6b2-4738-ec19-6e78213d874c"
    },
    "outputs": [],
    "source": [
@@ -426,8 +662,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 193,
+     "status": "ok",
+     "timestamp": 1698955434325,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "Q4vdymvH4AWs",
-    "outputId": "24ccfbe1-fcbc-4c25-9a5f-412653e4c3d4"
+    "outputId": "9e72a04c-f404-4485-fabf-c10e4cdf5e9c"
    },
    "outputs": [],
    "source": [
@@ -449,8 +698,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 186,
+     "status": "ok",
+     "timestamp": 1698955436296,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "9u7ca35F4AWs",
-    "outputId": "c9272db9-83a5-4668-ea8c-90480a18db27"
+    "outputId": "d27ba411-fb9c-46a8-9337-2d66b7f3092d"
    },
    "outputs": [],
    "source": [
@@ -473,7 +735,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 193,
+     "status": "ok",
+     "timestamp": 1698955438070,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "A_XVOuWrCU-T",
+    "outputId": "222b604b-4089-4225-fa11-c04135f26872"
+   },
    "outputs": [],
    "source": [
     "optPnL = CalculatePnL(nflxOpt2, nflxOpt1, numCallOptions)\n",
@@ -493,8 +771,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 207,
+     "status": "ok",
+     "timestamp": 1698955439736,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "FXHBJzn54AWs",
-    "outputId": "0aeaefc8-88b7-4306-cf2e-3ff7f3654073"
+    "outputId": "6d5de6b2-fe1a-4c5f-baf0-31b5731cd26f"
    },
    "outputs": [],
    "source": [
@@ -524,8 +815,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 185,
+     "status": "ok",
+     "timestamp": 1698955441708,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "BqvXA-Tg4AWs",
-    "outputId": "9ec9347a-625d-48eb-b183-183c087c5d14"
+    "outputId": "b1ea06b3-35b6-41d7-be0c-402bacc34522"
    },
    "outputs": [],
    "source": [
@@ -556,8 +860,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 592
+    },
+    "executionInfo": {
+     "elapsed": 1491,
+     "status": "ok",
+     "timestamp": 1698955444945,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "Sur7DL9N4AWt",
-    "outputId": "24c34f11-b133-4f9d-f7a0-2353900fdb7a"
+    "outputId": "ed2d9f90-164c-4dc8-f1fe-a503aa04e902"
    },
    "outputs": [],
    "source": [
@@ -584,8 +902,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 10,
+     "status": "ok",
+     "timestamp": 1698955448071,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "WKBeTdZx4AWt",
-    "outputId": "504886fa-1060-474a-ced5-0cee8f99c718"
+    "outputId": "28407fd6-7e2e-40bb-9ff4-eb5e009c2dbf"
    },
    "outputs": [],
    "source": [
@@ -599,8 +930,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 207,
+     "status": "ok",
+     "timestamp": 1698955449945,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "xOgjNEK04AWt",
-    "outputId": "1a00413b-460d-4dbb-eaed-4e55f4749a35"
+    "outputId": "b6ce94e2-9e79-4d65-c4b3-013856ba42b2"
    },
    "outputs": [],
    "source": [
@@ -622,8 +966,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 214,
+     "status": "ok",
+     "timestamp": 1698955452623,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "XGdAtmWT4AWt",
-    "outputId": "3dc430be-cfcb-4d92-fb1d-798d01b62fea"
+    "outputId": "a050f3b5-82d2-49b6-923a-1845679ddb89"
    },
    "outputs": [],
    "source": [
@@ -635,8 +992,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 188,
+     "status": "ok",
+     "timestamp": 1698955454091,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "BKufUX6L4AWt",
-    "outputId": "94a6018c-e45e-47c8-9aa4-0b22e5d3379d"
+    "outputId": "aacd07f0-2239-48e2-f974-0467705701af"
    },
    "outputs": [],
    "source": [
@@ -696,7 +1066,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "iLQXRYc-CU-d"
    },
    "source": [
     "---\n",
@@ -708,8 +1079,8 @@
  ],
  "metadata": {
   "colab": {
-   "name": "DFT_Module 4_Lesson 4.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -726,7 +1097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
