--- a/module-6/lesson-1/financial_data_module_6_lesson_1.ipynb
+++ b/module-6/lesson-1/financial_data_module_6_lesson_1.ipynb
@@ -35,7 +35,7 @@
     "|:---|:---|\n",
     "|**Reading Time** |  25 minutes |\n",
     "|**Prior Knowledge** | Basic Python, Sentiment Analysis (API)  |\n",
-    "|**Keywords** |Affect, JSON (JavaScript Object Notation), Application Programming Interface (API), NLTK (Natural Language Toolkit) |   \t\n",
+    "|**Keywords** |Affect, JSON (JavaScript Object Notation), Application Programming Interface (API), NLTK (Natural Language Toolkit) |\n",
     "\n",
     "---\n"
    ]
@@ -62,9 +62,9 @@
     "* Go to [Twitter.com](https://twitter.com/?lang=en) and get a Twitter account if you don't have one yet.\n",
     "* Sign in to the developer site [https://developer.twitter.com/en](https://developer.twitter.com/en) using your Twitter account\n",
     "* Now you need to register as an applications (app) developer\n",
-    "* Go to [https://apps.twitter.com/app/new](https://apps.twitter.com/app/new) \n",
+    "* Go to [https://apps.twitter.com/app/new](https://apps.twitter.com/app/new)\n",
     "* Give your new app a name and a description - you can be creative\n",
-    "* Enter anything for website \n",
+    "* Enter anything for website\n",
     "* Leave callback url blank\n",
     "* Read and accept the terms and conditions to create an account\n",
     "* Then, click on the \"Keys and Access Tokens\" tab\n",
@@ -72,13 +72,13 @@
     "* Scroll down and click \"Generate Access key and Secret\"\n",
     "* Copy the two access keys to the text file\n",
     "\n",
-    "**NOTE:** With this free Twitter API v2, you will get an error unless your search dates are within the last seven days. Also, you can only download 500,000 tweets per month. For this reason, be conservative and restrict your start and end times, especially if you are investigating tweets for very well-known companies, like AAPL (Apple) and GOOG (Alphabet / Google). Just a 30-minute block of time (the difference between start time and end time is 30 minutes) is actually sufficient to do some exploratory analysis on such large companies. Much smaller companies may require several hours or even days. \n",
+    "**NOTE:** With this free Twitter API v2, you will get an error unless your search dates are within the last seven days. Also, you can only download 500,000 tweets per month. For this reason, be conservative and restrict your start and end times, especially if you are investigating tweets for very well-known companies, like AAPL (Apple) and GOOG (Alphabet / Google). Just a 30-minute block of time (the difference between start time and end time is 30 minutes) is actually sufficient to do some exploratory analysis on such large companies. Much smaller companies may require several hours or even days.\n",
     "\n",
     "Note too that using the `client.sample()` method does not count against the 500K tweet limit. These tweets may not include a reference to the company you are investigating, but it could still be interesting. Once downloaded, you can also filter these tweets for whatever interests you.\n",
     "\n",
     "`Twarc` is a library that will make it a lot easier for us to search and access Twitter through its API. For more background on `Twarc`, see [this site](https://twarc-project.readthedocs.io/en/latest/twarc2_en_us/) and [this site](https://github.com/DocNow/twarc/blob/4bff06bb8f2e279ea0a2064d6bfaec3c9b4b3aff/docs/api/library.md).\n",
     "\n",
-    "Note from the documentation above that `Twarc` is a command line tool, but we have adapted it with [this code](https://github.com/twitterdev/getting-started-with-the-twitter-api-v2-for-academic-research/blob/f3b5b40d197ecaac133299eea46fefcced569d21/modules/6b-labs-code-standard-python.md) to run from a notebook as part of a function we define. \n",
+    "Note from the documentation above that `Twarc` is a command line tool, but we have adapted it with [this code](https://github.com/twitterdev/getting-started-with-the-twitter-api-v2-for-academic-research/blob/f3b5b40d197ecaac133299eea46fefcced569d21/modules/6b-labs-code-standard-python.md) to run from a notebook as part of a function we define.\n",
     "\n",
     "You will notice the reference to JSON objects. Luckily, we use `Twarc` to convert these into a `DataFrame`. Still, in the next section, you will need to become more familiar with JSON objects given how prevalent they are as a data type.  "
    ]
@@ -86,7 +86,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 321
+    },
+    "executionInfo": {
+     "elapsed": 33,
+     "status": "ok",
+     "timestamp": 1697566326491,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": -60
+    },
+    "id": "hdbVHV-hCRPm",
+    "outputId": "5c5b4754-0892-4ca3-aa71-94e819f5dc2f"
+   },
    "outputs": [],
    "source": [
     "from IPython.display import VimeoVideo\n",
@@ -96,7 +113,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "D4wpf0SFCRPn"
+   },
    "source": [
     "##### [Access video transcript here](https://drive.google.com/file/d/1i7aDRSZgaHg9w0i_wjOutoi87gjbovwA/view?usp=sharing)"
    ]
@@ -107,7 +126,7 @@
     "id": "ugYUJDvd4cFf"
    },
    "source": [
-    "## 2. Quantifying Affect \n"
+    "## 2. Quantifying Affect\n"
    ]
   },
   {
@@ -121,7 +140,7 @@
     "[Find more background on the NRCLex library you will be using here.](https://pypi.org/project/NRCLex/)\n",
     "\n",
     "And [here is information about another similar approach to sentiment analysis.](https://www.digitalocean.com/community/tutorials/how-to-perform-sentiment-analysis-in-python-3-using-the-natural-language-toolkit-nltk)\n",
-    "After getting familiar with the code and information in this notebook, please use the code provided in the article in your own notebook to try it for yourself, and discuss any issues or insights you have with your fellow students on the forum. \n"
+    "After getting familiar with the code and information in this notebook, please use the code provided in the article in your own notebook to try it for yourself, and discuss any issues or insights you have with your fellow students on the forum.\n"
    ]
   },
   {
@@ -169,8 +188,18 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 2879,
+     "status": "ok",
+     "timestamp": 1698953408715,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "KNtNqpIWNV0f",
-    "outputId": "b1b0be29-38fa-4496-9a39-7db7daa92967"
+    "outputId": "af134ba6-9a13-4b2b-9617-e8eed6b09ab7"
    },
    "outputs": [],
    "source": [
@@ -202,6 +231,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 214,
+     "status": "ok",
+     "timestamp": 1698953416310,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "6Mf8W9dS-IN-"
    },
    "outputs": [],
@@ -256,10 +295,20 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 417
+     "height": 394
+    },
+    "executionInfo": {
+     "elapsed": 360,
+     "status": "ok",
+     "timestamp": 1698953420412,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
     },
     "id": "BWZIW_6_CXDJ",
-    "outputId": "91815fbf-01cb-4b8b-9082-fa0936154dfb"
+    "outputId": "7185fece-e07c-4529-9248-ac0ca024a64f"
    },
    "outputs": [],
    "source": [
@@ -296,10 +345,20 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 417
+     "height": 394
+    },
+    "executionInfo": {
+     "elapsed": 458,
+     "status": "ok",
+     "timestamp": 1698953424902,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
     },
     "id": "33pPQcG_QmJ1",
-    "outputId": "de50ee94-aa45-45b6-9098-5372923a8df9"
+    "outputId": "10401572-7b80-4115-9978-f1fd8fcc7c5c"
    },
    "outputs": [],
    "source": [
@@ -326,7 +385,7 @@
     "A very simplistic approach to sentiment analysis might be to buy the stock with the more \"positive\" emotion counts.\n",
     "\n",
     "Alternatively, subtract the negative from the positive for a net positive vs. negative emotion, and buy the stock with the higher of these values -- and sell the other one (assuming you are evaluating pairs of stocks).\n",
-    " \n",
+    "\n",
     "Or, you might do some more analysis, looking at historical levels of these values -- and buy when there is a significant increase in a particular value.\n",
     "\n",
     "Which value? And what constitutes significant? You will need to perform a lot of experimentation -- testing and backtesting to find your answer.\n"
@@ -358,11 +417,11 @@
     "id": "4XAKfIxyzdOJ"
    },
    "source": [
-    "<b> References </b> \n",
+    "<b> References </b>\n",
     "\n",
     "* \"Append to JSON file using Python.\" *Geeks for Geeks*. https://www.geeksforgeeks.org/append-to-json-file-using-python/?ref=lbp.\n",
     "\n",
-    "* Bailey, Mark M. \"NRCLex.\" *Python Package Index (PyPI)*. 2019. https://pypi.org/project/NRCLex/. \n",
+    "* Bailey, Mark M. \"NRCLex.\" *Python Package Index (PyPI)*. 2019. https://pypi.org/project/NRCLex/.\n",
     "\n",
     "* Daityari, Shaumik. \"How To Perform Sentiment Analysis in Python 3 Using the Natural Language Toolkit (NLTK).\" *Digital Ocean*. 26 Sep 2019. https://www.digitalocean.com/community/tutorials/how-to-perform-sentiment-analysis-in-python-3-using-the-natural-language-toolkit-nltk.\n",
     "\n",
@@ -372,11 +431,11 @@
     "\n",
     "* \"JSON|Data Types.\" *Geeks for Geeks*. https://www.geeksforgeeks.org/json-data-types/.\n",
     "\n",
-    "* \"json.load() in Python.\" *Geeks for Geeks*. https://www.geeksforgeeks.org/json-load-in-python/. \n",
+    "* \"json.load() in Python.\" *Geeks for Geeks*. https://www.geeksforgeeks.org/json-load-in-python/.\n",
     "\n",
     "* \"json.loads() in Python.\" *Geeks for Geeks*. https://www.geeksforgeeks.org/json-loads-in-python/.\n",
     "\n",
-    "* \"json.dumps() in Python.\" *Geeks for Geeks*. https://www.geeksforgeeks.org/json-dumps-in-python/. \n",
+    "* \"json.dumps() in Python.\" *Geeks for Geeks*. https://www.geeksforgeeks.org/json-dumps-in-python/.\n",
     "\n",
     "* \"json.dump() in Python.\" *Geeks for Geeks*. https://www.geeksforgeeks.org/json-dump-in-python/.\n",
     "\n",
@@ -400,7 +459,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "hzOygbiECRPp"
    },
    "source": [
     "---\n",
@@ -412,8 +472,8 @@
  ],
  "metadata": {
   "colab": {
-   "name": "Financial Data_Module 6_Lesson 1.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
