--- a/module-6/lesson-3/financial_data_module_6_lesson_3.ipynb
+++ b/module-6/lesson-3/financial_data_module_6_lesson_3.ipynb
@@ -33,7 +33,7 @@
     "|:---|:---|\n",
     "|**Reading Time** |  35 minutes |\n",
     "|**Prior Knowledge** | Python  |\n",
-    "|**Keywords** |Trend, Momentum, Average Directional Index (ADX), Moving Average Convergence/Divergence (MACD), <br> Parabolic SAR (Stop and Reverse), Relative Strength Index (RSI), Stochastic Oscillator  |   \t\n",
+    "|**Keywords** |Trend, Momentum, Average Directional Index (ADX), Moving Average Convergence/Divergence (MACD), <br> Parabolic SAR (Stop and Reverse), Relative Strength Index (RSI), Stochastic Oscillator  |\n",
     "\n",
     "---"
    ]
@@ -67,7 +67,7 @@
     "\n",
     "Install the `TA` library and download the `datas.csv`, which is just price and volume data. The next few blocks of code calculate each of the 42 indicators supported by the repo. In the following sections, we will take a close look at a few of the indicators related to trend and momentum.\n",
     "\n",
-    "The required reading, \"Technical Analysis,\" 1-8, will give you a good overview of technical analysis, its history, and how it can be used. \n",
+    "The required reading, \"Technical Analysis,\" 1-8, will give you a good overview of technical analysis, its history, and how it can be used.\n",
     "Also required reading are the sections of this text that relate to the indicators discussed below: ADX (Average Directional Index), MACD (Moving Average Convergence/Divergence), Parabolic SAR (Stop And Reverse), RSI (Relative Strength Index), and the Stochastic Oscillator.\n"
    ]
   },
@@ -78,8 +78,18 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 606,
+     "status": "ok",
+     "timestamp": 1698953703473,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "NiwRdH2D7ySw",
-    "outputId": "f0b8b794-a3eb-4d1d-ce1d-419d6af6f850"
+    "outputId": "9f5517c0-fe43-4062-a57d-c509e646337d"
    },
    "outputs": [],
    "source": [
@@ -99,15 +109,25 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 488
+     "height": 255
+    },
+    "executionInfo": {
+     "elapsed": 26357,
+     "status": "ok",
+     "timestamp": 1698953729825,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
     },
     "id": "jkHmJGvEiraD",
-    "outputId": "90721aa7-5d12-44f9-ad3f-9aab2f9eff51"
+    "outputId": "ac07c23a-76e3-447b-eeb5-d6f6bfad1f1f"
    },
    "outputs": [],
    "source": [
     "# Load data\n",
-    "df = pd.read_csv(\"data/ta-test-data.csv.gz\", sep=\",\")\n",
+    "df = pd.read_csv(\"./data/ta-test-data.csv.gz\", sep=\",\")\n",
     "\n",
     "# Clean NaN values\n",
     "df = dropna(df)\n",
@@ -144,6 +164,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 171,
+     "status": "ok",
+     "timestamp": 1698953741726,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "ILJlQNlDKSYH"
    },
    "outputs": [],
@@ -315,10 +345,20 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 362
+     "height": 504
+    },
+    "executionInfo": {
+     "elapsed": 916,
+     "status": "ok",
+     "timestamp": 1698953749340,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
     },
     "id": "hWbOjqz_i5Ev",
-    "outputId": "b506ce81-ac5b-426e-8851-04b2ca909c2f"
+    "outputId": "5db5246a-3f4b-4f20-c892-d8ee8ff563ca"
    },
    "outputs": [],
    "source": [
@@ -366,13 +406,23 @@
    "source": [
     "As you study the required reading about Moving Average Convergence/Divergence (MACD) in \"Technical Analysis\" (104-108), ensure you understand how to compute and interpret it.\n",
     "\n",
-    "Again, the code from the `TA` library for the MACD class is provided below for your reference. \n"
+    "Again, the code from the `TA` library for the MACD class is provided below for your reference.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 182,
+     "status": "ok",
+     "timestamp": 1698953754166,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "iULPGmZSssCi"
    },
    "outputs": [],
@@ -450,10 +500,20 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 362
+     "height": 504
+    },
+    "executionInfo": {
+     "elapsed": 722,
+     "status": "ok",
+     "timestamp": 1698953758431,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
     },
     "id": "MzEZP-OcZkTS",
-    "outputId": "558dabed-96f0-44a9-b6f5-929461e7c842"
+    "outputId": "a4375ad0-10d9-4522-9ec9-e417a00bd101"
    },
    "outputs": [],
    "source": [
@@ -548,7 +608,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "NZSEzpeJCP5Q"
    },
    "source": [
     "---\n",
@@ -560,8 +621,8 @@
  ],
  "metadata": {
   "colab": {
-   "name": "Financial Data_Module 6_Lesson 3.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
