--- a/module-6/lesson-4/financial_data_module_6_lesson_4.ipynb
+++ b/module-6/lesson-4/financial_data_module_6_lesson_4.ipynb
@@ -34,7 +34,7 @@
     "|:---|:---|\n",
     "|**Reading Time** |  25 minutes |\n",
     "|**Prior Knowledge** | Application Programming Interface (API)  |\n",
-    "|**Keywords** |Urllib module, Application Programming Interface (API), Fundamental analysis   |   \t\n",
+    "|**Keywords** |Urllib module, Application Programming Interface (API), Fundamental analysis   |\n",
     "\n",
     "---"
    ]
@@ -66,12 +66,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 8,
+     "status": "ok",
+     "timestamp": 1698953728320,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "_bOAhQCWd0xk"
    },
    "outputs": [],
    "source": [
     "# Paste your API key from https://www.alphavantage.co/support/#api-key between the quotes\n",
-    "api_key = \"XXXXXXXXXXXXXXXX\""
+    "api_key = \"O2ZMKAVEVDVQ4RWF\""
    ]
   },
   {
@@ -92,8 +102,18 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 324,
+     "status": "ok",
+     "timestamp": 1698953728638,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "C1sAeYYXeQPQ",
-    "outputId": "f1d29d68-0e16-4bc9-ce6c-31fb387abfe6"
+    "outputId": "db5d1a63-cb5f-472c-cd4c-8faa85ee333e"
    },
    "outputs": [],
    "source": [
@@ -139,7 +159,7 @@
     "id": "SRPr-W1qBxd-"
    },
    "source": [
-    "## 2. The Urllib Module \n",
+    "## 2. The Urllib Module\n",
     "\n",
     "URL stands for uniform resource locator, the unique identifier used to locate a resource on the internet: in other words, a website address. When you look over the code for the FundamentalAnalysis repo, you will recognize the JSON import from Lesson 1. Notice too the references to the `Urllib` module, which helps our code interact with websites.\n",
     "\n",
@@ -186,7 +206,8 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "NXEuRpjzCO0N"
    },
    "source": [
     "---\n",
@@ -198,8 +219,8 @@
  ],
  "metadata": {
   "colab": {
-   "name": "Financial Data_Module 6_Lesson 4.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
