--- a/module-5/lesson-2/financial_data_module_5_lesson_2.ipynb
+++ b/module-5/lesson-2/financial_data_module_5_lesson_2.ipynb
@@ -65,16 +65,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "02Qlu1eDXuBQ",
-    "outputId": "64c6e8fc-1ae4-4799-de89-3148f736c000"
+    "id": "02Qlu1eDXuBQ"
    },
    "outputs": [],
    "source": [
-    "import time\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import yfinance as yfin\n",
@@ -83,35 +77,7 @@
     "\n",
     "from datetime import date\n",
     "from datetime import datetime as dt\n",
-    "from datetime import timedelta\n",
-    "\n",
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.chrome.options import Options\n",
-    "from selenium.webdriver.chrome.service import Service\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from selenium.webdriver.support.ui import Select, WebDriverWait\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "6q2wjaumXuBR"
-   },
-   "outputs": [],
-   "source": [
-    "# Required\n",
-    "company_ticker = \"HES\"  # or try: 'F', 'KHC', 'DVN'\n",
-    "\n",
-    "# Optional\n",
-    "company_name = \"Hess\"  # or try: 'Ford Motor', 'Kraft Heinz Co', 'Devon Energy'\n",
-    "\n",
-    "# Optional Input Choices:\n",
-    "# ALL, Annual, Anytime, Bi-Monthly, Monthly, N/A, None,\n",
-    "# Pays At Maturity, Quarterly, Semi-Annual, Variable\n",
-    "coupon_frequency = \"Semi-Annual\""
+    "from datetime import timedelta"
    ]
   },
   {
@@ -120,120 +86,25 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 882
+     "height": 765
     },
-    "id": "5I_RzCXEXuBS",
-    "outputId": "23cf19cc-a7d1-4ea6-a118-35303184d702"
+    "executionInfo": {
+     "elapsed": 12,
+     "status": "ok",
+     "timestamp": 1699750185524,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
+    "id": "Bg0Tho6iBjDQ",
+    "outputId": "12fda406-55ef-410a-906a-5d5377b59e82"
    },
    "outputs": [],
    "source": [
-    "# Selenium script\n",
-    "options = Options()\n",
-    "options.add_argument(\"--headless\")\n",
-    "options.add_argument(\"--no-sandbox\")\n",
-    "options.add_argument(\"--disable-dev-shm-usage\")\n",
-    "driver = webdriver.Chrome(\n",
-    "    service=Service(ChromeDriverManager().install()), options=options\n",
-    ")\n",
-    "\n",
-    "# store starting time\n",
-    "begin = time.time()\n",
-    "\n",
-    "# FINRA's TRACE Bond Center\n",
-    "driver.get(\"http://finra-markets.morningstar.com/BondCenter/Results.jsp\")\n",
-    "\n",
-    "# click agree\n",
-    "WebDriverWait(driver, 10).until(\n",
-    "    EC.element_to_be_clickable((By.CSS_SELECTOR, \".button_blue.agree\"))\n",
-    ").click()\n",
-    "\n",
-    "# click edit search\n",
-    "WebDriverWait(driver, 10).until(\n",
-    "    EC.element_to_be_clickable((By.CSS_SELECTOR, \"a.qs-ui-btn.blue\"))\n",
-    ").click()\n",
-    "\n",
-    "# input Issuer Name\n",
-    "WebDriverWait(driver, 10).until(\n",
-    "    EC.presence_of_element_located((By.CSS_SELECTOR, \"input[id=firscreener-issuer]\"))\n",
-    ")\n",
-    "inputElement = driver.find_element_by_id(\"firscreener-issuer\")\n",
-    "inputElement.send_keys(company_name)\n",
-    "\n",
-    "# input Symbol\n",
-    "WebDriverWait(driver, 10).until(\n",
-    "    EC.presence_of_element_located((By.CSS_SELECTOR, \"input[id=firscreener-cusip]\"))\n",
-    ")\n",
-    "inputElement = driver.find_element_by_id(\"firscreener-cusip\")\n",
-    "inputElement.send_keys(company_ticker)\n",
-    "\n",
-    "# click advanced search\n",
-    "WebDriverWait(driver, 10).until(\n",
-    "    EC.element_to_be_clickable((By.CSS_SELECTOR, \"a.ms-display-switcher.hide\"))\n",
-    ").click()\n",
-    "\n",
-    "# input Coupon Frequency\n",
-    "WebDriverWait(driver, 10).until(\n",
-    "    EC.presence_of_element_located((By.CSS_SELECTOR, \"select[name=interestFrequency]\"))\n",
-    ")\n",
-    "Select(\n",
-    "    (driver.find_elements_by_css_selector(\"select[name=interestFrequency]\"))[0]\n",
-    ").select_by_visible_text(coupon_frequency)\n",
-    "\n",
-    "# click show results\n",
-    "WebDriverWait(driver, 10).until(\n",
-    "    EC.element_to_be_clickable((By.CSS_SELECTOR, \"input.button_blue[type=submit]\"))\n",
-    ").click()\n",
-    "\n",
-    "# wait for results\n",
-    "WebDriverWait(driver, 10).until(\n",
-    "    EC.presence_of_element_located(\n",
-    "        (By.CSS_SELECTOR, \".rtq-grid-row.rtq-grid-rzrow .rtq-grid-cell-ctn\")\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "# create DataFrame from scrape\n",
-    "frames = []\n",
-    "for page in range(1, 11):\n",
-    "    bonds = []\n",
-    "    WebDriverWait(driver, 10).until(\n",
-    "        EC.presence_of_element_located(\n",
-    "            (By.CSS_SELECTOR, (f\"a.qs-pageutil-btn[value='{str(page)}']\"))\n",
-    "        )\n",
-    "    )  # wait for page marker to be on expected page\n",
-    "    time.sleep(2)\n",
-    "\n",
-    "    headers = [\n",
-    "        title.text\n",
-    "        for title in driver.find_elements_by_css_selector(\n",
-    "            \".rtq-grid-row.rtq-grid-rzrow .rtq-grid-cell-ctn\"\n",
-    "        )[1:]\n",
-    "    ]\n",
-    "\n",
-    "    tablerows = driver.find_elements_by_css_selector(\n",
-    "        \"div.rtq-grid-bd > div.rtq-grid-row\"\n",
-    "    )\n",
-    "    for tablerow in tablerows:\n",
-    "        tablerowdata = tablerow.find_elements_by_css_selector(\"div.rtq-grid-cell\")\n",
-    "        bond = [item.text for item in tablerowdata[1:]]\n",
-    "        bonds.append(bond)\n",
-    "\n",
-    "        # Convert to DataFrame\n",
-    "        df = pd.DataFrame(bonds, columns=headers)\n",
-    "\n",
-    "    frames.append(df)\n",
-    "\n",
-    "    try:\n",
-    "        driver.find_element_by_css_selector(\"a.qs-pageutil-next\").click()\n",
-    "    except:  # noqa E722\n",
-    "        break\n",
-    "\n",
-    "bond_prices_df = pd.concat(frames)\n",
-    "\n",
-    "# store end time\n",
-    "end = time.time()\n",
-    "\n",
-    "# total time taken\n",
-    "print(f\"Total runtime of the program is {end - begin} seconds\")\n",
+    "# Loading the appropriate .csv bond data file\n",
+    "bond_prices_df = pd.read_csv(\"bond-prices.csv\")\n",
     "\n",
     "bond_prices_df"
    ]
@@ -246,6 +117,9 @@
    },
    "outputs": [],
    "source": [
+    "# A function that will help with cleaning and transforming the data\n",
+    "\n",
+    "\n",
     "def bond_dataframe_filter(df):\n",
     "    # Drop bonds with missing yields and missing credit ratings\n",
     "    df[\"Yield\"].replace(\"\", np.nan, inplace=True)\n",
@@ -285,10 +159,20 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 246
+     "height": 285
+    },
+    "executionInfo": {
+     "elapsed": 9,
+     "status": "ok",
+     "timestamp": 1699750185525,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
     },
     "id": "BWbL_ydTXuBW",
-    "outputId": "109fe35e-7640-4a1c-ca3a-dfe8971c3166"
+    "outputId": "d1b152ca-c507-4f5e-825f-c0890d6d8c1d"
    },
    "outputs": [],
    "source": [
@@ -362,8 +246,9 @@
     "\n",
     "To calculate the expected risk premium, we must first calculate the market rate of return. We can use the capital asset pricing model (CAPM) to determine the market rate of return.\n",
     "\n",
-    "$$r_{_m} = r_{_f} + \\beta \\cdot \\text{MRP}$$\n",
+    "$$r_i = r_f + \\beta_i \\cdot (r_m - r_f)    \\equiv  r_f + \\beta_i \\cdot \\text{MRP}$$\n",
     "\n",
+    "$r_{_i}$ = Expected Return of investment $i$  <br>\n",
     "$r_{_m}$ = Market Rate of Return  <br>\n",
     "$r_{_f}$ = Risk-free Rate  <br>\n",
     "$\\beta$ = Beta  <br>\n",
@@ -383,8 +268,18 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 412,
+     "status": "ok",
+     "timestamp": 1699750185929,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
     "id": "h9Nnk2ajXuBY",
-    "outputId": "150a4e4c-ce59-491c-ece4-20b2421d060a"
+    "outputId": "cc4e6383-7706-4a68-b005-655b217e2e59"
    },
    "outputs": [],
    "source": [
@@ -457,8 +352,18 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 8,
+     "status": "ok",
+     "timestamp": 1699750185930,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
     "id": "XGHCv74lXuBZ",
-    "outputId": "a2286f9e-01b9-475b-91f1-3cfac7c2d15a"
+    "outputId": "e6ea2595-7991-44db-f54d-40ac21444139"
    },
    "outputs": [],
    "source": [
@@ -472,34 +377,25 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "9btuL_pf0b05"
+   },
+   "source": [
+    "The calculation presented above approximates the expected market rate of return ($r_m$) as being composed of the risk-free rate ($r_f$), in addition to the Market Risk Premium (MRP)—also known as the Equity Risk Premium (ERP)—as proposed by Damodaran. This relationship is encapsulated in the following formula:\n",
+    "\n",
+    "$$\n",
+    "r_m \\approx r_f + \\text{MRP}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "id": "W0Cvti00XuBZ"
    },
    "source": [
     "Now that we have calculated the market rate of return, we can determine the expected risk premium by subtracting the risk-free rate from the market rate of return and multiplying the result by the beta for the bond.\n",
     "\n",
-    "**_Expected Risk Premium = (Market Rate of Return - Risk-free Rate of Return) * Beta_**\n",
-    "\n",
-    "In this step, we will use a one-year risk-free rate so that the expected risk premium matches the duration we want for the risk-adjusted discount rate. We accomplish this by taking the yield on the very liquid 10-year U.S. Treasury note and raising it to the power of 1/10 in order to convert the yield to a one-year equivalent.\n",
-    "\n",
-    "Note that `2**3` is Pythonic for $2^3$, or 2 raised to the power of 3 (= 8).\n",
-    "By the same token, `8**(1/3)` is the cube root of 8 (=2).<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "LfNiy8D9XuBZ",
-    "outputId": "6c63f32f-9521-45ba-bc1a-983ee43466e8"
-   },
-   "outputs": [],
-   "source": [
-    "# One-Year Risk-free Rate\n",
-    "one_year_risk_free_rate = (1 + ten_year_risk_free_rate) ** (1 / 10) - 1\n",
-    "one_year_risk_free_rate"
+    "**_Expected Risk Premium = (Market Rate of Return - Risk-free Rate of Return) * Beta_**"
    ]
   },
   {
@@ -531,7 +427,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "d7hQj_dcnWad"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 464,
+     "status": "ok",
+     "timestamp": 1699750186388,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
+    "id": "d7hQj_dcnWad",
+    "outputId": "17649694-e42c-489f-cdf4-127e2ecf1db6"
    },
    "outputs": [],
    "source": [
@@ -556,19 +466,31 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 15,
+     "status": "ok",
+     "timestamp": 1699750186388,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
     "id": "HeCm39NramOK",
-    "outputId": "a745067c-6fd6-40d3-c9f6-a3f7d6c903f3"
+    "outputId": "b7005dec-f75e-42ef-f04c-e5c951a729f9"
    },
    "outputs": [],
    "source": [
     "# Approach #1 - Covariance/Variance Method:\n",
     "\n",
     "# Calculate the covariance between the fund and the market -- this is the numerator in the Beta calculation\n",
-    "fund_market_cov = fund_data[\"Adj Close\"].cov(market_data[\"Adj Close\"])\n",
+    "fund_market_cov = (\n",
+    "    fund_data[\"Adj Close\"].pct_change().cov(market_data[\"Adj Close\"].pct_change())\n",
+    ")\n",
     "print(\"covariance between fund and market: \", fund_market_cov)\n",
     "\n",
     "# Calculate market (S&P) variance -- this is the denominator in the Beta calculation\n",
-    "market_var = market_data[\"Adj Close\"].var()\n",
+    "market_var = market_data[\"Adj Close\"].pct_change().var()\n",
     "print(\"market variance: \", market_var)\n",
     "\n",
     "# Calculate Beta\n",
@@ -583,8 +505,18 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 13,
+     "status": "ok",
+     "timestamp": 1699750186388,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
     "id": "IoZw2fTvQUcG",
-    "outputId": "8502ec1c-99a0-444f-cd6f-b1efdf2453c5"
+    "outputId": "6c2f1a13-3f01-49b4-b752-50fb78be80d4"
    },
    "outputs": [],
    "source": [
@@ -595,12 +527,14 @@
     "print(\"market standard deviation: \", market_stdev)\n",
     "\n",
     "# Calculate bond fund standard deviation, for use in the numerator\n",
-    "fund_stdev = fund_data[\"Adj Close\"].std()\n",
+    "fund_stdev = fund_data[\"Adj Close\"].pct_change().std()\n",
     "print(\"fund standard deviation: \", fund_stdev)\n",
     "\n",
     "# Calculate Pearson correlation between bond fund and market (S&P), for use in the numerator\n",
-    "fund_market_Pearson_corr = fund_data[\"Adj Close\"].corr(\n",
-    "    market_data[\"Adj Close\"], method=\"pearson\"\n",
+    "fund_market_Pearson_corr = (\n",
+    "    fund_data[\"Adj Close\"]\n",
+    "    .pct_change()\n",
+    "    .corr(market_data[\"Adj Close\"].pct_change(), method=\"pearson\")\n",
     ")\n",
     "print(\"Pearson correlation between fund and market: \", fund_market_Pearson_corr)\n",
     "\n",
@@ -628,8 +562,18 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 12,
+     "status": "ok",
+     "timestamp": 1699750186389,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
     "id": "Gc7ZyNm4XuBa",
-    "outputId": "aa7c2c98-d79f-44f5-cc20-87cf462741e2"
+    "outputId": "eb7b8b41-49b5-407c-bfd3-de79accf2e1c"
    },
    "outputs": [],
    "source": [
@@ -654,13 +598,23 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 9,
+     "status": "ok",
+     "timestamp": 1699750186389,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
     "id": "4s8jGBihXuBb",
-    "outputId": "2e15cf9a-4afd-40c0-93d8-0171a7cc6e72"
+    "outputId": "cced66ec-873a-4249-9020-f544ee23d816"
    },
    "outputs": [],
    "source": [
     "# Expected Risk Premium\n",
-    "expected_risk_premium = (market_rate_of_return - one_year_risk_free_rate) * bond_beta\n",
+    "expected_risk_premium = (market_rate_of_return - ten_year_risk_free_rate) * bond_beta\n",
     "expected_risk_premium"
    ]
   },
@@ -681,23 +635,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "0XZcRCzaXuBb",
-    "outputId": "235f7eb6-7a3a-45cb-c321-c262c45765ee"
-   },
-   "outputs": [],
-   "source": [
-    "# One-Year Risk-free Rate (same code as above)\n",
-    "one_year_risk_free_rate = (1 + ten_year_risk_free_rate) ** (1 / 10) - 1\n",
-    "one_year_risk_free_rate"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "NYWPx3rRXuBb"
@@ -713,13 +650,23 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 7,
+     "status": "ok",
+     "timestamp": 1699750186389,
+     "user": {
+      "displayName": "Christos Koutkos",
+      "userId": "05788829401179389824"
+     },
+     "user_tz": -120
+    },
     "id": "0He5a_K-XuBc",
-    "outputId": "71a480b0-1a2d-4627-d550-7d155e1fae3f"
+    "outputId": "83ad7610-c6cb-402e-bec5-14856567a2ae"
    },
    "outputs": [],
    "source": [
     "# Risk-adjusted Discount Rate\n",
-    "risk_adjusted_discount_rate = one_year_risk_free_rate + expected_risk_premium\n",
+    "risk_adjusted_discount_rate = ten_year_risk_free_rate + expected_risk_premium\n",
     "risk_adjusted_discount_rate"
    ]
   },
@@ -730,11 +677,9 @@
    },
    "source": [
     "## 4. Conclusion\n",
-    "In this lesson, we reviewed CAPM and found the risk-adjusted discount rate, which is an input to our market-implied probability of default estimation. \n",
+    "In this lesson, we reviewed CAPM and found the risk-adjusted discount rate, which is an input to our market-implied probability of default estimation.\n",
     "\n",
     "In order to find the risk-adjusted discount rate, we had to find the one-year risk-free rate and the expected risk premium.\n",
-    "\n",
-    "We found the one-year risk-free rate by taking the tenth-root of the ten-year risk-free rate.\n",
     "\n",
     "We found the expected risk premium by first finding the market risk premium and the beta.\n",
     "\n",
@@ -769,16 +714,18 @@
     "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
     "SOFTWARE.\n",
     "\n",
-    "**Note:** The above MIT license notice is copied here to comply with its requirements, but it does **not** apply to the content in these lesson notes. \n",
+    "**Note:** The above MIT license notice is copied here to comply with its requirements, but it does **not** apply to the content in these lesson notes.\n",
     "\n",
-    "\n"
+    "\n",
+    "<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "640xdnYyMNoG"
    },
    "source": [
     "---\n",
@@ -790,9 +737,8 @@
  ],
  "metadata": {
   "colab": {
-   "collapsed_sections": [],
-   "name": "Financial Data_Module 5_Lesson 2.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -809,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
