--- a/module-6/lesson-2/financial_data_module_6_lesson_2.ipynb
+++ b/module-6/lesson-2/financial_data_module_6_lesson_2.ipynb
@@ -35,7 +35,7 @@
     "|:---|:---|\n",
     "|**Reading Time** |  30 minutes |\n",
     "|**Prior Knowledge** | Basic Python  |\n",
-    "|**Keywords** |Simple Moving Average (SMA), Exponential Moving Average (SMA), Pearson correlation, Spearman correlation, <br> Kendall correlation, Single exponential smoothing, Double (Holt's) exponential smoothing, Triple (Holt-Winters) exponential smoothing |   \t\n",
+    "|**Keywords** |Simple Moving Average (SMA), Exponential Moving Average (SMA), Pearson correlation, Spearman correlation, <br> Kendall correlation, Single exponential smoothing, Double (Holt's) exponential smoothing, Triple (Holt-Winters) exponential smoothing |\n",
     "\n",
     "---"
    ]
@@ -58,7 +58,7 @@
     "id": "kzUmit9IQH3L"
    },
    "source": [
-    "## 1. Time Series Analysis and Smoothing \n",
+    "## 1. Time Series Analysis and Smoothing\n",
     "\n",
     "Financial engineering often relies on historical data, so a solid understanding of time series analysis is crucial. Most of what you need to know for this lesson about forecast quality metrics and smoothing techniques will be found in the required reading ([section 1: \"Introduction\" and section 2: \"Move, smoothe, evaluate\"](https://www.kaggle.com/kashnitsky/topic-9-part-1-time-series-analysis-in-python)).\n",
     "\n",
@@ -85,6 +85,16 @@
    "metadata": {
     "_cell_guid": "14791e9e-f541-4188-88ee-84713814287e",
     "_uuid": "2cb534a31814f0e8974f4f969455027879afdb20",
+    "executionInfo": {
+     "elapsed": 2489,
+     "status": "ok",
+     "timestamp": 1698953529479,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "RIQrNaoSNKN8"
    },
    "outputs": [],
@@ -116,6 +126,16 @@
    "metadata": {
     "_cell_guid": "4f179bc5-2318-4cf2-a2ec-b600c0237cb0",
     "_uuid": "aef36b7e96463d18de1138c46e37569b8638e3b0",
+    "executionInfo": {
+     "elapsed": 2443,
+     "status": "ok",
+     "timestamp": 1698953531914,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "zk6rUHqyNKN-"
    },
    "outputs": [],
@@ -143,7 +163,21 @@
    "metadata": {
     "_cell_guid": "5b76c6bf-a268-4b3a-810e-c3962c0b83c2",
     "_uuid": "28f3609438af096646bae77b5ce9250f5e885c76",
-    "id": "SZRQQfEhNKN-"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 2192,
+     "status": "ok",
+     "timestamp": 1698953534093,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "SZRQQfEhNKN-",
+    "outputId": "1ed04659-1b8d-4141-9703-919bf3555484"
    },
    "outputs": [],
    "source": [
@@ -151,12 +185,12 @@
     "for coin in crypto:\n",
     "    for column in crypto[coin].columns:\n",
     "        if column not in [\"Date\", \"Close\"]:\n",
-    "            crypto[coin] = crypto[coin].drop(column, 1)\n",
+    "            crypto[coin] = crypto[coin].drop(columns=column)\n",
     "    # Make date the datetime type and reindex\n",
     "    crypto[coin][\"Date\"] = pd.to_datetime(crypto[coin][\"Date\"])\n",
     "    crypto[coin] = crypto[coin].sort_values(\"Date\")\n",
     "    crypto[coin] = crypto[coin].set_index(crypto[coin][\"Date\"])\n",
-    "    crypto[coin] = crypto[coin].drop(\"Date\", 1)"
+    "    crypto[coin] = crypto[coin].drop(columns=\"Date\")"
    ]
   },
   {
@@ -165,7 +199,21 @@
    "metadata": {
     "_cell_guid": "4dee53f0-a55d-4199-a7b2-e71e9c7cff10",
     "_uuid": "907c912c55066968c8834a7d28ee2f4d3491650d",
-    "id": "ZTxsASeiNKN_"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 219,
+     "status": "ok",
+     "timestamp": 1698953537012,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "ZTxsASeiNKN_",
+    "outputId": "fdb752e4-e4fa-4b53-d8fb-0dfe7476cef2"
    },
    "outputs": [],
    "source": [
@@ -181,7 +229,7 @@
     "id": "0YD3FlhbNKN_"
    },
    "source": [
-    "**Note:** \n",
+    "**Note:**\n",
     "As this is a fixed set of data, the coins numeraire, iota, and bitcoin_cash all were all relatively young and therefore do not have many data points. (*) So let's omit these currencies and for the time being consider only the most recent 350 data points for the remaining currencies."
    ]
   },
@@ -191,6 +239,16 @@
    "metadata": {
     "_cell_guid": "456ee863-40c5-485f-abba-4abe20fd6547",
     "_uuid": "8195ed09a53cb263465f4974c8c8316616d3c971",
+    "executionInfo": {
+     "elapsed": 206,
+     "status": "ok",
+     "timestamp": 1698953539213,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "KLHxP06kNKOA",
     "tags": []
    },
@@ -205,6 +263,16 @@
    "metadata": {
     "_cell_guid": "54f10987-4b5f-47d5-8303-6c9505904897",
     "_uuid": "ce89402e44a745e20b7db68aee253f6967459fb4",
+    "executionInfo": {
+     "elapsed": 306,
+     "status": "ok",
+     "timestamp": 1698953540434,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
     "id": "r69IDa8gNKOB",
     "tags": []
    },
@@ -226,9 +294,9 @@
    },
    "source": [
     " As previously stated, the goal of this analysis is to create a correlation matrix for these currencies. One way to find correlation between time series is to look at *cross-correlation* of the time series. Cross-correlation is computed between two time series using a lag, so when creating the correlation matrix, (*) we need to specify the correlation as well as the lag.\n",
-    " \n",
+    "\n",
     " Before computing the cross-correlation, it is important to have \"wide-sense stationary\" (often just called stationary) data. There are a few ways to make data stationary -- one of which is through differencing. But even after this, it is famously difficult to avoid spurious correlations between time series data that are often caused by autocorrelation. See this article for an in-depth analysis of how spurious correlations arise and how to avoid them: [\"Dangers and Uses of Cross-Correlation in Analyzing Time Series in Perception, Performance, Movement, and Neuroscience: The Importance of Constructing Transfer Function Autoregressive Models.\"](https://doi.org/10.3758/s13428-015-0611-2) (This is a free, shareable article, but it is not a required reading.)\n",
-    " \n",
+    "\n",
     "For now, (*) we will employ daily differencing (as it is not seasonal) and test for stationarity to prepare for cross-correlation testing."
    ]
   },
@@ -238,7 +306,21 @@
    "metadata": {
     "_cell_guid": "01a7f876-2337-493c-b750-e284582286a8",
     "_uuid": "5ec21995a731253debc3c0de5ebffa37400b75bb",
-    "id": "-HokzqAlNKOC"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 236,
+     "status": "ok",
+     "timestamp": 1698953542944,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "-HokzqAlNKOC",
+    "outputId": "3af3d53a-6a26-4343-d71b-f42a6e4ad6eb"
    },
    "outputs": [],
    "source": [
@@ -264,7 +346,22 @@
    "metadata": {
     "_cell_guid": "04095141-8b27-4b83-a2cf-4712a429eb69",
     "_uuid": "45b7ce3844a37deba2f3728d97093843a4a37d70",
-    "id": "dfJBZKPUNKOC"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 452
+    },
+    "executionInfo": {
+     "elapsed": 927,
+     "status": "ok",
+     "timestamp": 1698953546772,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "dfJBZKPUNKOC",
+    "outputId": "e781d4a0-7ab9-41c7-ae9f-178a15ca799c"
    },
    "outputs": [],
    "source": [
@@ -293,7 +390,21 @@
    "metadata": {
     "_cell_guid": "9bc6c911-438a-4eb2-b952-f43322d7b950",
     "_uuid": "00b136164062296edc7c3b8197b2053815d9e8b8",
-    "id": "g5G-w2n7NKOC"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 13,
+     "status": "ok",
+     "timestamp": 1698953600255,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "g5G-w2n7NKOC",
+    "outputId": "a613bfc8-69cc-4047-d8e0-1c0cfca43a86"
    },
    "outputs": [],
    "source": [
@@ -308,7 +419,22 @@
    "metadata": {
     "_cell_guid": "95da6f84-2619-406b-8027-84e784b14c23",
     "_uuid": "b8e75f104b7e4805a307e74eb0bfba10463c33b8",
-    "id": "-E_4hmlRNKOD"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 452
+    },
+    "executionInfo": {
+     "elapsed": 985,
+     "status": "ok",
+     "timestamp": 1698953605664,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "-E_4hmlRNKOD",
+    "outputId": "74969c82-a5e8-4f5d-a068-979143882045"
    },
    "outputs": [],
    "source": [
@@ -339,7 +465,22 @@
    "metadata": {
     "_cell_guid": "8c666d05-28e0-4395-b61a-0787594f1c36",
     "_uuid": "5af1356c4181985b6496fe624015605bfc902cb9",
-    "id": "X2jtNjLFNKOJ"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 452
+    },
+    "executionInfo": {
+     "elapsed": 984,
+     "status": "ok",
+     "timestamp": 1698953610057,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "X2jtNjLFNKOJ",
+    "outputId": "72f956ac-d35b-43c3-da99-1a86052d7287"
    },
    "outputs": [],
    "source": [
@@ -400,7 +541,21 @@
    "metadata": {
     "_cell_guid": "d5645535-0666-493c-81a8-40e58b4fcf7e",
     "_uuid": "5cce64817a9a862712e888fa109271f087f0c8ae",
-    "id": "TTYz1bY1NKOK"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 331,
+     "status": "ok",
+     "timestamp": 1698953615361,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "TTYz1bY1NKOK",
+    "outputId": "4d50f915-3ab6-47f5-d86e-63de28a6c32f"
    },
    "outputs": [],
    "source": [
@@ -419,7 +574,21 @@
    "metadata": {
     "_cell_guid": "037df3d9-63c2-4b34-8bb7-28f1fab55811",
     "_uuid": "632dcbcf91628057de006327eddee3aeec12a3f9",
-    "id": "dzDx-5LINKOK"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 244,
+     "status": "ok",
+     "timestamp": 1698953619722,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "dzDx-5LINKOK",
+    "outputId": "af3ad8c2-e952-4df3-955f-39ce373a5073"
    },
    "outputs": [],
    "source": [
@@ -441,7 +610,7 @@
    },
    "source": [
     "**Note:**\n",
-    "Here we see that our data is very stationary. This is clear because of the extremely low p-values. \n",
+    "Here we see that our data is very stationary. This is clear because of the extremely low p-values.\n",
     "\n",
     "It is important here to note there are other ways to detrend other than looking at differenced data or percent change. However, some of these methods would not have proven fruitful for this dataset. Take, for example, using the residuals of this data based on a simple linear regression. This can be easily done using `scikit learn`'s linear regression tool."
    ]
@@ -452,7 +621,22 @@
    "metadata": {
     "_cell_guid": "98298af9-c255-4944-abb6-cac6ace164f8",
     "_uuid": "a5905bf439fc3f62de223d9fdcfc6c7d58b5a5c1",
-    "id": "3f7a5pElNKOK"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 1000
+    },
+    "executionInfo": {
+     "elapsed": 4791,
+     "status": "ok",
+     "timestamp": 1698953628392,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "3f7a5pElNKOK",
+    "outputId": "e08586d9-5a46-4365-c1b2-fd7ce3aef93e"
    },
    "outputs": [],
    "source": [
@@ -501,7 +685,22 @@
    "metadata": {
     "_cell_guid": "898a12be-2143-4cfe-901a-89653c719a3d",
     "_uuid": "a48fcbbdeda7d86ffd0d5bb38d82588506e49e9d",
-    "id": "DYZetLuNNKOK"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 1000
+    },
+    "executionInfo": {
+     "elapsed": 3923,
+     "status": "ok",
+     "timestamp": 1698953637456,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "DYZetLuNNKOK",
+    "outputId": "a5334331-98bf-4d70-c469-22c1855bc4e6"
    },
    "outputs": [],
    "source": [
@@ -531,7 +730,7 @@
     "id": "6fo4cznZNKOL"
    },
    "source": [
-    "Now we can look at the correlations among these currencies. \n",
+    "Now we can look at the correlations among these currencies.\n",
     "We will compute the correlations using three different methods: pearson, spearman, and kendall.<span style='color: transparent; font-size:1%'>All rights reserved WQU WorldQuant University QQQQ</span>"
    ]
   },
@@ -541,7 +740,22 @@
    "metadata": {
     "_cell_guid": "301c87a4-8f33-403e-a282-31454c4d1d9a",
     "_uuid": "0e26d454d17babca828b13291647ecb9fb09911a",
-    "id": "slZqeC64NKOL"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 869
+    },
+    "executionInfo": {
+     "elapsed": 675,
+     "status": "ok",
+     "timestamp": 1698953640114,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "slZqeC64NKOL",
+    "outputId": "52ece7ca-cf83-4427-fc74-320ed0737dac"
    },
    "outputs": [],
    "source": [
@@ -566,7 +780,22 @@
    "metadata": {
     "_cell_guid": "b0717b7f-0c5a-4dff-98f6-bb38d3797408",
     "_uuid": "e604b4c698618327912aebcd301f11ca010aedcf",
-    "id": "fhR739m3NKOL"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 869
+    },
+    "executionInfo": {
+     "elapsed": 631,
+     "status": "ok",
+     "timestamp": 1698953644061,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "fhR739m3NKOL",
+    "outputId": "dd291c71-0214-4444-e2db-f1b80707daf8"
    },
    "outputs": [],
    "source": [
@@ -584,7 +813,22 @@
    "metadata": {
     "_cell_guid": "a7f41fd6-5b60-4969-9da1-f5588c692878",
     "_uuid": "ef1a8ccaba72f43c064d7a3a5cd817fa5b683bb7",
-    "id": "lyV0Qk8GNKOL"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 869
+    },
+    "executionInfo": {
+     "elapsed": 602,
+     "status": "ok",
+     "timestamp": 1698953648074,
+     "user": {
+      "displayName": "Tea Toradze",
+      "userId": "13683888799925082799"
+     },
+     "user_tz": 0
+    },
+    "id": "lyV0Qk8GNKOL",
+    "outputId": "f412ebae-3af1-4f2b-ebae-16c1e417adf1"
    },
    "outputs": [],
    "source": [
@@ -645,20 +889,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "K8uNA07RCQnQ"
+   },
    "source": [
     " **Footnotes**\n",
-    " \n",
+    "\n",
     " - In compliance with the Apache License 2.0, the (*) marks the places where changes were made to the original notebook.\n",
-    " - You can find the [APACHE LICENSE, VERSION 2.0 here.](https://www.apache.org/licenses/LICENSE-2.0) \n",
-    " - **NOTE:** The above Apache license notice is copied here to comply with its requirements, but it does **not** apply to the content in these lesson notes. "
+    " - You can find the [APACHE LICENSE, VERSION 2.0 here.](https://www.apache.org/licenses/LICENSE-2.0)\n",
+    " - **NOTE:** The above Apache license notice is copied here to comply with its requirements, but it does **not** apply to the content in these lesson notes."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "id": "0Pa0F6xxCQnR"
    },
    "source": [
     "---\n",
@@ -670,8 +917,8 @@
  ],
  "metadata": {
   "colab": {
-   "name": "Financial Data_Module 6_Lesson 2.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
